--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,37 +1,43 @@
 ---
-title: 乌克兰无人机爱好者报名参加击退俄军的行动
+title: 七哥赴英日需要美国同意并确信离开美国和在目的国安全
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114284/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114371/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/03/1-60.jpg)
-图片来源：网络截图
+Youtube视频链接：[https://youtu.be/GFa983YEEOY](https://youtu.be/GFa983YEEOY)
 
-据美联社3月5日报道，一些乌克兰无人机爱好者正冒着生命危险，正在组建一支志愿无人机部队，帮助他们的国家击退俄罗斯的入侵。
+**郭文贵先生：**首先一些战友关于去日本、去英国这个问题、话题刚才都谈到了，还有捐款的事情。大家一定要记住，我去日本、去英国有三个问题必须要解决才能去：第一个美国政府不同意，我去不了。就像美国的就是我们政治庇护的负责人跟我通电话跟我说，他说：“Miles，我今天必须告诉你个秘密，之所以不给你现在发这个政治庇护，甚至可能就不给你政府庇护了直接就给你发美国特殊贡献护照。”
 
-上周末，乌克兰军方在脸书上发文，呼吁市民捐赠业余无人机，并自愿成为有经验的飞行员来操作它们，“在这个愤怒的时刻，基辅需要你和你的无人机！”。
+“之所以没给你，就不想让你离开美国。因为离开美国要确保你的安全。”他说“不是一个人认为，很多人都认为你是美国的、最佳的、最重要的、最值得保护的人。”——不叫资产。他说：“我们会用美国国旗把你保护好的。”所以说大家记住，就是我这个政治庇护，你要不是美国政府——美国政府说我随时可以给你护照的，我也可以给你政治庇护。但是没保证你安全情况下，是不可能让你离开美国的。
 
-一位在首都经营消费类无人机零售店的企业家说，其全部库存的约300架由中共国公司大疆生产的无人机已被分散用于这项事业。其他人正在努力从波兰和欧洲其他地方的朋友和同事那里获得更多的无人机，以跨越边境。
+他说：“另外一个，就是你离开美国去向任何地方，如果没有绝对的安全的保证，是不可能让你去的，而且这不是你一个人说了算。你去英国、你去日本，我们跟英国、日本政府联络好，他对你个人承诺都不能算数，必须在美国政府相关部门的可信下才能离开。”所以说这是肯定的，即使再快，也是六月份以后的事情。
 
-“我们为什么要这样做？我们没有其他选择。这是我们的土地，我们的家园。”基辅工业无人机技术公司DroneUA的运营主管丹尼斯·苏什科（Denys Sushko）说，该公司在战前正帮助为农民和能源公司提供无人机服务。
+所以战友们，安全的问题你们很担心，但是我特别感动，就是你们这种担心是发自内心的。这不是谷爱凌她娘操作她当冠军——什么我在美国时是美国人，在中国时是中国人，不是那么不自然，都是自然的。
 
-与乌克兰武库中的土耳其制造的大得多的战斗无人机不同，现成的消费者无人机作为武器没有什么用处，但它们可以成为强大的侦察工具。民众一直在使用空中摄像机追踪俄罗斯车队，然后将图像和GPS坐标转发给乌克兰军队。一些机器有夜视和热传感器。苏什科说，许多业内人士现在正试图让更多的小型无人机，包括大疆的替代品从邻近的欧洲国家运入乌克兰。它们也可用于协助搜救行动。
+编辑整理：Jacques；
 
-但大疆公司提供的工具可以很容易地确定没有经验的无人机操作员的位置，而且没有人真正知道这家中共国公司或其客户会用这些数据做什么。这让一些志愿者感到不安。大疆公司拒绝讨论关于它如何应对这场战争的具体细节。
+字幕文件制作：小满；
 
-乌克兰有一个蓬勃发展的无人机专家社区，其中一些人在国家航空大学或附近的基辅理工大学接受教育，并继续创建当地的无人机和机器人初创公司。大疆无人机经销商塔拉斯·特罗亚克（Taras Troiak）在基辅的大疆品牌店是这个社区的一个中心，因为它经营着一个维修中心，并举办培训课程和一个爱好俱乐部。由特罗亚克管理的一个专注于无人机的公共脸书小组有超过15000名成员，他们一直在交换关于如何协助乌克兰部队的提示。
+视频制作及上传：Cindy；
 
-澳大利亚无人机安全专家迈克·蒙尼克说：“乌克兰境内的民用无人机操作员面临的风险仍然很大。鉴于我们在迄今为止的战斗中所看到的情况，找到操作员的位置可能会导致定向导弹射击。这不再是我们以前冲突中的交战规则了”。蒙尼克说，最近几天，信息应用Telegram上的俄语频道主要讨论如何找到乌克兰的无人机。
+G-News发布：小满；
 
-由于乌克兰与俄罗斯支持的分离主义分子在乌克兰东部的长期冲突，乌克兰的一些无人机社区已经有在冲突地区部署其专业知识的经验。蒙尼克的公司，DroneSec，在过去的一年里追踪到了冲突双方用炸药武装小型无人机的多起事件。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-大疆也有应对作战人员试图将其无人机武器化的经验，并在叙利亚和伊拉克的冲突中使用所谓的“地理围栏 ”技术来阻止无人机的移动。目前还不清楚它是否会在乌克兰做同样的事情，即使它这样做，也有办法绕过它。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-小型民用无人机无法与俄罗斯的战斗力相比，但在一场旷日持久的战争中可能会变得越来越重要。“我们将看到这些小型民用无人机的临时武装，就像我们在世界各地的冲突中看到的那样，从叙利亚到伊拉克、也门和阿富汗，” 写过一本关于战争机器人的书的美国研究员辛格说，“就像简易爆炸装置或燃烧弹一样，它们不会改变战局，但它们肯定会让俄罗斯士兵感到困难。”
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-新闻来源：[Ukrainian drone enthusiasts sign up to repel Russian forces](https://apnews.com/article/russia-ukraine-kyiv-technology-business-europe-47dfea7579cedfe65a70296eb0188212)
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
