--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,24 +1,32 @@
 ---
-title: 视频&#124;俄罗斯戒严征兵升级致大量民众外逃
+title: 乌克兰救援3.5. 新中国联邦美国与欧洲救援团都已抵达现场并开展救援
 ---
-`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114127/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114245/)
 
-制作：香草山视频部
+撰稿：DG
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture221.png)
+2022年3月5日，NFSC救援行动纽约团队抵达华沙。前线总指挥大卫在盖特上直播采访了一个别救的中国留学生和当地市长。
 
-当地时间3月4日，据相关媒体报道，随着俄乌战争局势的恶化，俄罗斯当地民众对当局可能或正在实施的戒严令、暴政和征兵措施愈发恐惧和担心。为此，大量的俄罗斯人正在试图逃往国外。
+2022年3月5日9:49PM（美东时间，乌克兰基辅时间6日早上4:49AM），NFSC救援行动电报群组里更新了大巴时间表。
 
-报道提及，那些外逃的俄罗斯人主要是担心该国即将到来的军事动员行动，他们大多都不愿意参与战争。因此，很大一部分人可能此生都不会再回到莫斯科。
+3月5日 – 3月6日， 2班 X 50 座
+3月7日起2星期: 2班X50座，2班X59座，1班X58座，1班X56座，1班X50座2022年
 
-资料显示，除了邻近的欧洲国家和中东地区外，美国也是这些外逃俄罗斯人的主要目的地：上万名绝望的俄罗斯人正在试图通过墨西哥入境美国，寻求联邦政府的庇护。美国海关和边境保护局的数据表明，2022年的前两个月中，接近六千名俄罗斯人正在等待美国政府的庇护。
+3月5日前线总指挥大卫在盖特上直播介绍当地的情况，大卫说：
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-11.png)
+我们是来救人的，救人靠情报、资源，靠对当地环境的了解。这几天需要躲避交通拥堵和涌来的大量难民和不安全因素比如在局部边境已经发生了抢、盗这样的现象。还有就是已经开始出现对华人排斥的现象，比如有的留学生无法搭乘巴士、卡车、私家车，因为你是华人。他们本能的抗拒或反感。
 
-另据俄罗斯抗议监督组织数据显示，自2月24日俄乌开战以来，俄罗斯境内大约有超过七千六百人因反战示威而遭到拘禁。
+另外通报一下，前些天在社交媒体上流传的那些诋毁、抹黑、恶意评价乌克兰这场战争和饱受灾难的居民的视频，国内这些小粉红们垃圾人，他们的视频在乌克兰大肆传播并被翻译成多种语言，又被转给乌克兰正在逃难的人，甚至乌克兰正在战斗的人，你想想这意味着什么？！所以现在乌克兰在迷茫失望之中，可能又多了一份可能潜在的待爆发的仇恨，这就是中共给华人洗脑以后这些脑残们在海外的恶意言行带来的灾难。
 
-发稿：林礼
+我现在能感受到包括昨天七哥一再问我，“你有没有感到危险”，我说句心里话我担心，我从当地人的眼神里他们的绝望也可能成为仇恨，这是我们面临的情况。也是我们为什么来到这里，直播，也是我们新中国联邦为什么会把这辆大巴，用实力展示在乌克兰境内把60多人拉到这个波兰的火车站，没有实力没有之前的准备是不可能做到的，战友们！
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+而且现在在乌克兰境内只有一个还能安全撤离的来这里的通道就是：
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-10.png)
+原文链接：[https://www.gettr.com/streaming/py8k3mecdc](https://www.gettr.com/streaming/py8k3mecdc)
+
+校对发布： Shifter
+
+
 
  
 
