--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,31 +1,35 @@
 ---
-title: 乌克兰救援03.05: 小Sara现场报道纽约救援团队在机场受到了前所未有的尊重
+title: 拜登政府将对中共国商品关税展开审查
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114062/)
+`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2114186/)
 
-撰稿：DG
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Pictu的re1.png)图片来源：Gettr
-美东3月4日晚上九点多，新中国联邦法治基金乌克兰人道救援行动-纽约救援团在机场出发，随行的小Sara战友分享了，战友救援团在机场遇到前所未有的尊重。
+**撰稿：日本东京方舟农场 北极**
 
-小撒拉：今天感觉非常不一样。我曾经在欧洲留学，飞来飞去很多国家，也坐过头等舱、商务舱、管它什么舱都尝试国过一遍。
+美中第一阶段贸易协议期限已届，中共没有兑现其采购承诺，拜登政府是否祭出惩罚性关税，或展开新的贸易政策，受到外界关注。 图为美国加州长滩港集装箱运输。
 
-罗伊：你刚才说作为中国人受到了前所未有的尊重。你是否给我们讲一讲路上和国际友人接触的时候，为什么说受到了前所未有的尊重？
+![](https://assets.gnews.org/wp-content/uploads/2022/03/拜登政府.png)（图片来自大纪元）
 
-小撒拉说，我在换登机牌的时候，我就跟他们打个招呼，“How are you guys?” (非常好听的英文）对方说“还好吧”，就在哪儿忙碌。我说你知道我那个箱子上贴的那个是啥吗？ 他说“救援（Rescue）”。我说我们就是去乌克兰救援的，我们是来自新中国联邦的。他说：‘新中国联邦是什么？’
+据大纪元3月06日报道，美国即将对价值340亿美元的第一批中共国商品关税展开审查。
 
-我说：‘我们是新中国人’。他其实不在意你是不是中国人。我说就跟俄罗斯人不支持政府打仗一样，中国人不等于中国政府。他说他非常赞成。他说很感谢你们，你们能出去救人。我说后面都是我们一起去乌克兰救人的。
+根据《贸易法》第301条规定，进口商品关税在征收四年后到期，美国贸易代表办公室有权对其进行审查。审查需要在其可能结束前的60天内进行，第一批340亿美元的中国商品将在接下来的几个月内到期，即7月6日。
 
-**当你一说出去救人，他不管你的皮肤颜色，不管你是那类人，只要你做的事是好的，所有全世界的人都会欢迎你。当时一下子我被人尊重了**，头一回作为中国人在全是老外的国家体验到这种尊重。当你不发声没有行动的时候，我们的形象已经被中共毁掉了。只有我们发声，愿意跟人讲述，我们去救人，我们是新中国联邦人，我们不等于中国政府，我们要去前线，当时他就给我鼓掌👏  ！
+即使在俄罗斯入侵乌克兰导致大宗商品供应收紧之后，拜登政府没有发出取消关税的计划的信号， 通胀率目前已超过7%，从能源到小麦的价格都在飙升。
 
-罗伊：刚刚你和小王子直播的时候，是背对着后面排队登机的人，我看到不仅是他在鼓掌，后面的都在鼓掌，都在用目光注视着你们，他们都在听和关注着你们的行为。
+拜登总统保留了前任川普总统对中欧工国商品征收关税的政策。川普政府期间先后征收了4次关税：2018年7月份以来，美国先是对340亿美元商品征收25%关税，随后对160亿美元商品征收25%关税，然后扩大到对2000亿美元关税征收10%关税，到2019年5月再将2000亿美元商品的关税提升到25%。
 
-小撒拉：当小王子用英文喊出来的时候，大家都明白了。他说“我们去救援，我们去乌克兰，我们支持乌克兰人”。这个时候很多人，旁边经济舱的人，都给我们鼓掌。他们全都是外国人，这一整个飞机就我们这一群中国人，连亚裔面孔都没有。
+2020年初，特朗普和中国国家主席习近平达成协议，签署了第一阶段协议。中国同意增加对美国商品和农产品的购买，即比贸易战开始前多购买2000亿美元。
 
-来源链接：[https://www.gettr.com/post/py8k3mecdc](https://www.gettr.com/post/py8k3mecdc)
+但中国未能实现这些目标。 追踪中国采购情况的彼得森国际经济研究所高级研究员乍得·鲍恩（Chad Bown）表示，中国有望只采购其承诺购买的商品的60%。
 
-校对发布：Shifter
+拜登几个月前表示，这就是他保留关税的原因。
 
+参考链接：
+[https://www.epochtimes.com/b5/22/3/5/n13624781.htm](https://www.epochtimes.com/b5/22/3/5/n13624781.htm)
+[https://www.bbc.com/zhongwen/simp/business-48770168](https://www.bbc.com/zhongwen/simp/business-48770168)
 
+素材采编：北极
+编辑：老孙
+发布：Linda
 
  
 
