--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,25 +1,24 @@
 ---
-title: 秘翻在线：欧洲25国150个电台同一时间播放反战歌曲声援乌克兰
+title: 视频&#124;俄罗斯战俘呼吁俄军士兵不要做炮灰
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2113998/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114171/)
 
-**撰稿：青衣**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/11-8.jpg)欧洲150个电台同时播放反战歌曲声援乌克兰（图片来自《希望之声》）
-欧洲25国的150个电台相约在同一时间一起播放约翰·列侬的著名反战歌曲《给和平一个机会》，以此表达对乌克兰的声援。发起人表示，这是为了展示团结，同时提醒世人不应对战争视而不见。
+制作：香草山视频部
 
-据《中央社》报道，格林威治时间3月4日上午7点45分，包括乌克兰电台在内的150个欧洲电台同时播放歌曲《给和平一个机会》（Give Peace a Chance），以此表达对乌克兰的支持。
+3月4日，据盖特消息显示，被乌克兰俘获的俄罗斯士兵近日陆续通过视频向外界传递出他们被蒙骗出战以及其自身对战争的拒绝。
 
-发起这次活动的欧洲广播联盟（European Broadcasting Union，EBU）表示，许多欧洲民营广播电台也自发加入了此次活动。包括乌克兰等国家在内的上百万户家庭、汽车与公共场所，都在同一时间响起这首著名反战歌曲。
+这些俄罗斯士兵表示，他们在出战前根本不清楚这次战争的对象和性质，而他们对此的任何疑问则全部遭到上级长官粗暴的拒绝与封口。更有士兵提到，直至进入乌克兰后他们才清楚，这次战争的目的是为了侵略乌克兰，而不是“解救”乌克兰民众。
 
-乌克兰电台第一频道（Channel One）执行制作人塔巴成柯（Yurii Tabachenko）对欧洲广播联盟同事的支持表达了感谢。 他说：“今天，欧洲围绕着乌克兰而团结，这真的很重要。”
+至于俄罗斯当局在交战中采取的手段，这些士兵证实，俄军不仅不会帮阵亡的将士收尸，甚至还会将伤残的俄军士兵就地处死并焚毁。
 
-《给和平一个机会》这首歌收录于1969年出版的《塑料小野乐团》（Plastic Ono Band），该专辑是约翰·列侬离开“披头士”后发表的第一张专辑。
+为此，这些俄罗斯士兵在视频中声明，他们实际上是受到了政府的欺骗，他们既不愿意侵略乌克兰，也不愿意成为这场独裁者战争的炮灰。这些士兵也向所有的俄军将士呼吁， 请大家不要再受政府的蒙骗，成为独裁者的牺牲品。同时，他们也号召俄罗斯人民站起来反对普京，停止这场毫无意义的战争，停止这场人类的灾难。
 
-**新闻链接：**
+发稿：林礼
 
-[https://www.cna.com.tw/news/aopl/202203050011.aspx](https://www.cna.com.tw/news/aopl/202203050011.aspx)
-
-[https://www.soundofhope.org/post/600046](https://www.soundofhope.org/post/600046)
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
