--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,19 +1,28 @@
 ---
-title: 普京称完成军事设施破坏 人道主义走廊却无法使用
+title: 秘翻在线：美乌总统再通电话共商对乌支援及对俄持续制裁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2113814/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114002/)
 
-撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-496.png)[图片来源](https://www.iza.ne.jp/article/20220306-WBACX2JRKROWVJKLQJ4PRRUQPE/photo/QV5P5QAORZNIZLMCWULXEIZEKI/)
-据日本媒体报道，俄罗斯总统普京5日表示，作为在乌克兰军事行动主要目的的军事基础设施破坏“基本完成”，并强调行动按计划进行。 在该国各地继续交战，俄罗斯军队于当天晚上在马里乌波尔东部恢复袭击，5日没有实现平民疏散。用于疏散的“人道主义走廊”在6日之后继续进行。
+**撰稿：青衣**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/22-3.jpg)
+乌克兰总统泽伦斯基3月6日再次与美国总统拜登通电话，共同商议对乌克兰的安全与财政支援，以及对俄罗斯的持续制裁。德国智库专家表示，大规模制裁势必重创俄罗斯经济。
 
-与此同时，以色列总理贝内特5日赶赴莫斯科会见普京，国际斡旋和关于停火的水面下讨论仍在继续。参加停火谈判代表团的俄罗斯参议员苏尔茨基指出，下一轮谈判可能在7日举行。
+据《阿波罗新闻网》3月6日报道，乌克兰总统泽伦斯基（Volodymyr Zelensky）发推文称，他已与美国总统再次对谈，谈话内容包括安全问题、对乌克兰的财政支援，以及继续向俄罗斯实施制裁。
 
-信息来源：[ロシア、軍事施設破壊「完了」　人道回廊、実現持ち越し](https://news.yahoo.co.jp/articles/73f23184d8697caf92ca5f301297b3b86e20c0d0)
+白宫也证实双方领导人再次通了电话，两人对谈了约30分钟。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+白宫表示，拜登与泽伦斯基通电话时说，很高兴看到Visa和万事达卡（Mastercard）等国际信用卡公司暂停在俄罗斯业务的决定。拜登总统在电话中还表示，他的政府正在增加对乌克兰安全、人道主义和经济援助，并与国会密切合作，以确保获取额外资金。
+
+对于欧美国家向俄罗斯祭出史无前例的经济和金融制裁，德国智库学术暨政治基金会（Stiftung Wissenschaft und Politik）东欧专家克鲁格（Janis Kluge）认为，如此大规模的制裁措施势必会重创俄国经济，俄民间不满情绪会继续升高，进而进一步动摇普京的领导地位。
+
+据克鲁格预计，西方接下来可能将会对俄国实施石油禁运。
+
+**新闻链接：**
+
+[https://m.soundofhope.org/post/600202](https://m.soundofhope.org/post/600202)
+
+[https://www.aboluowang.com/2022/0306/1717134.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0306/1717134.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
