--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,38 +1,32 @@
 ---
-title: 挑战在即。美“人民车队”已抵达华盛顿之前最后一站：马里兰
+title: 克里姆林宫的私人飞机前往华盛顿是要接回被驱逐的俄罗斯外交官？
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2114217/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114350/)
 
-作者： 香草山农场教育部—霍比特人
+翻译：Steven Hu
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-29.jpg)
+图片来源：谷歌图片
 
-据《雅虎新闻》和《每日邮报》报道，美“人民车队”即将给美国警方带来挑战。该车队几天前离开南加州前往华盛顿特区。他们效仿加拿大“自由车队”(Freedom Convoy)的模式，后者在渥太华市中心封锁了三周，以抗议加拿大的强制疫苗政策。
+《零对冲》一架俄罗斯政府喷气式飞机已经离开圣彼得堡，正在飞往华盛顿的途中，这是美国东海岸居民周六凌晨醒来时听到的令他们惊讶的消息。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/20220306b.png)
+社交媒体上议论炸了锅——一些人最初想知道：这是否是俄罗斯总统普京要与拜登总统进行特别一轮谈判？
 
-“我们是美利坚合众国的人民，我们在自由的旗帜下站在一起——自由是把我们团结在一起的一件事，”人民车队网站上的一条信息说。“自由流淌在我们的血管里。”
+不幸的是，这些怀疑被证明是不正确的，实际上几乎是不现实的。美国国务院发表声明，确认这架飞机将接走因入侵乌克兰而被联合国驱逐出境的俄罗斯外交官。 国务院将被逮捕的雇员描述为“俄罗斯情报人员”。 俄罗斯外交部在发布给 电报（Telegram ）的一份声明中证实，这架飞机是去接载被驱逐的俄罗斯外交官。
 
-警方一直在与这些组织的组织者联系。随着车队在全国各地的行进，参与者的数量不断变化中。车队拟于国情咨文演讲日抵达华盛顿。弗吉尼亚州警方正在监控弗吉尼亚州北部“可能影响交通的商业和客运车辆”。华盛顿大都会地区运输管理局周五表示，由于卡车车队的原因，本周末的地铁乘客可能会遭遇严重的延误和中断。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/20220306a.png)
-另外，华盛顿特区警方也不得不和美国特勤局和国会警察一起给星期二的国情咨文演讲提供安全保障，持续保持警戒。 随着乌克兰战事逐渐明朗化，和国情咨文演讲日正在临近，“人民车队”的进展越发令人关注。
+预计该航班将在下午某个时间降落在杜勒斯国际机场。
 
-参考链接：
+截至周六东部时间 1030 点，伊留申 Il-96-300（在俄罗斯国家运输公司/俄罗斯特种飞行中队注册为 RA-96019）向西飞行，目的地为纽约市。 根据飞行地图，这是它最近一次沿格陵兰附近飞行。
 
-[https://www.youtube.com/watch?v=JNhe2kQ4Qs8](https://www.youtube.com/watch?v=JNhe2kQ4Qs8)[https://news.yahoo.com/truck-convoy-threatens-clog-dc-134415877.html?fr=sycsrp\_catchall](https://news.yahoo.com/truck-convoy-threatens-clog-dc-134415877.html?fr=sycsrp_catchall)
+俄罗斯周二将这一驱逐在纽约联合国工作的外交官行为定义为“升级”。 别忘了，即使是伊朗和朝鲜外交官也被允许毫发无损地往返于联合国。
 
+飞行数据显示，俄罗斯总统弗拉基米尔·普京本人并不常用这架喷气式飞机。 指出普京常用的应该是两架编号157715 或 157716的飞机。而事实上，目前正在飞行的 Ilyushin Il-96-300 确实经常从克里姆林宫起飞的飞机。
 
+由于美国和欧盟对俄罗斯亿万富翁、政治家和其他普京总统的盟友实施一系列制裁，这次飞行引起了西方观察家的兴趣。 目前，乌克兰正在呼吁北约在乌克兰设立一个“禁飞区”，而北约一直不愿下令这么做，因为正如延斯·斯托尔滕贝格将军所明确表示的那样，如此做法，可能会将北约卷入第三次世界大战。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-5.png)
+译者：这是一篇字里行间耐人寻味的报道，在这报道发表后不久，推特上路透社发了一个“乌克兰总统将会晤拜登“及“普示将会见以色列总理”的推。而拜登总统要求在乌美国人“立即”离开乌克兰，飞往华盛顿的私人飞机到底坐的是谁？这是一次为和平所做的最后努力？还是摊牌？
 
-编辑：霍比特人
-校正/发稿：霍比特人
+原文链接：[https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un](https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un)
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
