--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,30 +1,21 @@
 ---
-title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年3月5日晚
+title: NewSGman┃疫情新闻全球速报（ 3月5日）
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2113176/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2113527/)
 
-作者：香草山翻译部
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Gnews-image-5.png)![](https://assets.gnews.org/wp-content/uploads/2022/03/text-SC-1-1.png)
+撰稿：东京樱花团/NewSGman
 
+**美国参议院通过决议以结束Covid-19国家紧急状态，周四3月3日参议院共和党人通过了一项决议，以结束目前根据政府两年前的《国家紧急状态法》（NEA）声明从 Covid-19 大流行开始时生效的国家紧急状态**
 
-校对：Stay文苑
+**决议以 48 票对 47 票票数获得批准，该决议由共和党参议员罗杰·马歇尔 发起并保持微弱优势在两党投票中获得通过**
 
-编辑：Stay文苑
+**尽管决议在参议院获得通过但拜登政府已表明将否决它，拜登政府仍希望继续保持在国家紧急状态下政府所拥有的**用来应对 COVID-19（CCP病毒） 大流行危机期间的强有力的政府权力
 
-发稿：Stay文苑
+盖特链接：[https://www.gettr.com/post/pyak2a14a2](https://www.gettr.com/post/pyak2a14a2)
 
-新闻：[https://gettr.com/post/pyf9rc53d8](https://gettr.com/post/pyf9rc53d8)
-访谈：[https://gettr.com/post/pyf2befaf2](https://gettr.com/post/pyf2befaf2)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-524x720-3-4.jpeg)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
