--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,9 +1,9 @@
 ---
-title: 俄罗斯阵亡士兵给母亲的短信
+title: 塔斯社被黑：显示反战信息
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113084/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113088/)
 
-02/28/2022 乌克兰驻联合国大使宣读了据信是一名俄罗斯士兵在阵亡前不久发给他母亲的短信，批评俄罗斯入侵乌克兰的行为。
+02/28/2022 据路透社报道，俄罗斯国家通讯社塔斯社的网站据信已被黑客入侵，显示出了反战信息。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
