--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,9 +1,9 @@
 ---
-title: 两名俄罗斯寡头呼吁结束普京的战争
+title: 俄罗斯对乌克兰哈尔科夫无差别轰炸，包括居民区和学校
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113082/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113086/)
 
-02/28/2022 世界各国对俄罗斯实施了旨在削弱其经济的严厉制裁，不仅是普通人的日常生活受到了影响，对普京具有影响力的寡头们也感受到了痛苦，有一些已经站出来呼吁停止战争。
+02/28/2022 随着俄罗斯继续推进，乌克兰第二大城市哈尔科夫的人道主义危机正在恶化。袭击发生之际，国际刑事法院正在就涉嫌战争罪对俄罗斯展开调查。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
