--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,9 +1,9 @@
 ---
-title: 评论者担心俄对乌入侵会令中共侵台更加大胆
+title: 俄罗斯阵亡士兵给母亲的短信
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113080/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113084/)
 
-02/28/2022 前国防部战略和军事发展助理副部长艾尔布里奇·科尔比担心俄罗斯在乌克兰的侵略会使中共国对台湾的侵略更加大胆。他认为，中共国是一个比俄罗斯更大的威胁。
+02/28/2022 乌克兰驻联合国大使宣读了据信是一名俄罗斯士兵在阵亡前不久发给他母亲的短信，批评俄罗斯入侵乌克兰的行为。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
