--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,34 +1,39 @@
 ---
-title: 新中国联邦人乌克兰战区人道救援首战告捷
+title: 意当局扣押俄罗斯亿万富翁7000万美元的游艇
 ---
-`cindy` [轉載自GNews](https://gnews.org/zh-hans/2114201/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114337/)
 
-撰稿：澳喜cindy
+翻译：Steven Hu
+![](https://assets.gnews.org/wp-content/uploads/2022/03/2-35.jpg)
+图片来源：《零对冲》
 
-俄乌战争已经第十天了，双方两次谈判均无果。俄军人数比乌军多5-10倍，并用导弹狂轰滥炸，快速向各大城市进军，核发电厂被炮弹击中起火。形势相当严峻。
+《零对冲》报道，又一艘属于俄罗斯商人的游艇被扣押，这次是在意大利。 据报道，意大利警方查获了位于意大利利古里亚省因佩里亚​​的 俄罗斯斯商人亚历克西.阿里克山德罗维茨.莫德肖夫（Alexey Alexandrovits Mordaschov ）的一艘价值 6500 万欧元（7100 万美元）的游艇“Lady M Yacht”。 并说这次扣押符合最近的欧盟制裁。
 
-乌克兰总统再三喊话普京：“坐下来面谈，我不咬人，你怕什么？”“普京到底要什么”？
+莫德肖夫是俄罗斯亿万富翁商人，也是俄罗斯企业集团 Severstal 的主要股东和董事长，该集团在金属、能源和矿业公司中拥有权益。
 
-乌克兰总统在新闻发布会上说：“俄军随身带来了焚尸炉 ，世界末日已经到来”。
+在有关报道俄罗斯入侵乌克兰的新闻浪潮中，扣押属于受制裁的俄罗斯寡头的游艇已成为西方国家的一种娱乐。前中央情报局雇员发起了一场“夺取舰队”的运动，而另一位美国国会议员则试图让普通美国人参与其中。
 
-这确实是够惊悚的。猜测：这可能是普京已经预估到将有大批士兵死亡，将来怎么向国内的百姓交代呢？这种消尸灭迹，数据可以篡改，死无对证。
+更重要的是，拜登总统本周宣布了一个更积极的、针对俄罗斯寡头的“捕获盗国贼（KleptoCapture） 的特别工作组，主要是没他们的房地产和其他珍贵资产。
 
-我们看到很多自媒体的视频，采访被俘的俄国士兵：你们知道为什么要打乌克兰吗？他们都说根本不知道，上级告诉他们只是军演。看来这场战争真的只是普京自己需要的战争。
+许多富有的俄罗斯人的游艇已经离开西方前往莫斯科，其中包括一艘通常被认为与普京有关的游艇。 但正如我们上周解释的那样，据称属于普京的大部分财富，包括游艇和几​​处豪宅（包括据报道耗资 10 亿美元的黑海度假村），已无可能同普京扯上任何关系，因为根据主要离岸律师事务所和银行泄露的财务记录，它们的所有权是通过中介机构来操纵的。
 
-乌克兰总统惊呼：现在已经是世界末日了！
+当然，并非所有俄罗斯寡头都带着资产逃离欧洲，拜登政府本周早些时候明确表示，他们将“没收俄罗斯亿万富翁的游艇、豪华公寓和私人飞机”。
 
-鉴于乌克兰局势日益恶化，新中国联邦来自英国、美国、瑞士、加拿大等国家的战友们，几天来不顾自己安危，不辞劳苦，忘我的奔赴战区，准备救人所需的繁杂的事务。昨天成功地从乌克兰轰鸣的炮火中救出了70个乌克兰战区的孩子、母亲和一些中国同胞。乘坐的大巴历经15个小时到达了乌克兰的邻国波兰避难场所。在那里为被救人员筹备物资和生活用品的战友们，连续多日没有休息好，大巴车抵达时，第一时间送上了各种食物和水。并且还安排好了安全的住宿等待飞往各个国家，期间将提供30天以内的免费食宿。
+我们的问题是：“拜登的目标是没收数十亿美元，俄罗斯寡头难道不会从海上逃到印度洋？”
 
-波兰这位热舒夫市长的善良的忠告：“希望中共国站出来反对这场战争”。“不要站在边上看着”。
+答案似乎是“是”。 但并不是所有的俄罗斯寡头都成功了。 法国宣布扣押属于俄罗斯石油公司首席执行官伊戈尔谢钦（Igor Sechin)的超级游艇。 法国财政部长布鲁诺·勒梅尔（Bruno Le Maire）本周透露，此举是欧盟对俄罗斯持续制裁的一部分。
 
-中共何止是不反对普京发动的这场战争，习近平就是普京的坚强后盾。
+这艘游艇被称为 Amore Vero（真爱），它“在一夜之间”在地中海港口 La Ciotat 被没收”，彭博社周四上午报道。而布隆伯格写道，当这艘游艇被没收时，它正在“准备紧急出发”。
 
-接下来，新中国联邦将已安排好的营救专机747、757、大力神运输机，协助华人同胞、美国及其他各国友人免费撤离，目的地为美国和其他安全中转国。作为新中国联邦的一员我们深为有这样的无私无畏的战友们而自豪，没有文贵先生的智慧和决策和非常好的信誉，各个复杂的环节可能很难在如此短的时间里做到这么完美。看了整个过程， 真的让人感动。被救的人素不相识，甚至连彼此的姓名都不知道，只是为了救人一命。这是新中国人的伟大壮举！可赞可颂！
+勒梅尔本周在推特上表示：“感谢法国海关对与俄罗斯领导人关系密切的人实施欧盟制裁。”
 
-*编辑：cindy*
+而另据报告，法国预算部长奥利弗·杜索普特澄清这艘游艇“被阻止离开”，但资产仍未被冻结。 最初打算在港口停留至四月。
 
-【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
-【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+另外，一些最大的俄罗斯拥有的豪华游艇正在印度洋周围航行。
+
+拜登总统周二晚在国情咨文中警告称，美国和欧洲将“没收”俄罗斯亿万富翁的资产。他说：“今晚，我要对从这个暴力政权中建立数万亿美元的俄罗斯寡头和腐败政权说：‘够了！‘我们为了你的不义之财而来！”
+
+原文链接：[https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure](https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure)
 
  
 
