--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,18 +1,33 @@
 ---
-title: 视频&#124;（战争下的乌克兰儿童）
+title: 李嘉诚家族出售英国最大配电公司
 ---
-`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114182/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2114321/)
 
-制作：香草山视频部
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-然而，战火依然给乌克兰民众带来了无尽的创伤，尤其是那些患病的儿童：不只是病痛，危险与不安定的环境让他们的生存变得更加艰难。
+整理：围剿维尼熊
+编辑：skyandmoon2012
 
-发稿：林礼
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/6-32.png)图片来源：雅典娜设计组
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+
+根据网易新闻3月4日讯，据彭博社报道：由澳大利亚投行麦格理集团和全球私募巨头KKR牵头的财团正在与李嘉诚家族洽谈关于收购其旗下资产UK Power Networks的事宜。
+
+UK Power Networks是英国最大的配电公司，估值高达150亿英镑（约合人民币1260亿元）。参与竞标的机构还包括荷兰退休金机构APG、中投（CIC）、安大略省教师养老金计划委员会和加拿大养老金投资管理公司PSP Investments。
+
+过去十多年间，李嘉诚家族在英国的总投资超过4000亿港币（约合人民币3200亿元）。李嘉诚家族还拥有英国最大的电信运营商、全英国最多的连锁酒吧门店。
+
+不过自2020年起，李嘉诚家族已陆续出售英国乃至欧洲的部分资产。
+
+资料来源：[李嘉诚家族出售英国最大配电公司](https://www.163.com/dy/article/H1LEE0N00550U0A7.html)
+
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
