--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,48 +1,25 @@
 ---
-title: 文•贵天成——文贵先生谈“SWIFT”（三）
+title: 再见了——俄罗斯游客
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2114123/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2114231/)
 
-整理：小儿
-编辑：Kelly
+#### 编译/简评                 意大利达芬奇农场                            小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Schermata-2022-03-06-alle-09.07.26-1.png)图片来源：ilgazzettino.it
+两年的新冠病毒疫情及乌克兰危机给意大利旅游业造成了致命性的打击。
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/03/SWIFT.png)图片来源：雅典娜设计组
+仅以复活节来看，没有来自莫斯科的游客会给意大利旅游部门造成两千万欧元的损失。
+
+俄罗斯游客与美国游客和中国游客一起被认为是最能花钱的。他们是五星级酒店和高级时装的消费者， 2019年有一百七十万俄罗斯人来意大利旅游。
+
+据意大利旅游协会统计，2021年米兰是俄罗斯客人喜欢购物的城市，免税商品销售额的39%是卖给了俄罗斯客人。撒丁岛特别是翡翠海岸，是俄罗斯豪华游艇的最爱， 但现在他们却逃离了那儿。受重创的北方城市威尼斯、维罗纳2021年由于受疫情的影响， 俄罗斯游客减少了90%以上， 而仅在2019年仅威内托一个大区就接受了一百万的俄罗斯游客。由于乌克兰危机，美国游客纷纷取消预定的意大利假期，对于中国人目前还毫无限制，但受到了新冠疫情限制措施的影响。而恰恰是俄罗斯人、美国人和中国人是最大的旅游消费群体。
+
+欧盟对俄罗斯的制裁会给本来处于危机的旅游业更是雪上加霜。旅游业比起其他行业来说是首当其冲，深受其害。如果中共发动对台战争，今天的俄罗斯人在世界所处的状况就是明天中国人的写照。中共不灭，中国人和世界人民都要为此付出巨大的代价。
 
 
-郭文贵**2021**年**2**月**15**日直播
 
-七哥有时候发的盖特你们老不注意，有时候我发完以后就想，战友们明白我啥意思吗？我头两天说拜登上台对咱们最大的好处是虚拟货币G-Coin、G-Dollar，大家最近感觉到啥好消息了吗？我想听听看谁能说对？美国对虚拟货币有什么好消息吗？我想听听，看看战友们（怎么回答）？
+原文链接：[https://www.ilgazzettino.it/nordest/venezia/turisti\_russi\_veneto\_venezia\_verona\_cosa\_succede\_ora\_disdette\_seconde\_case\_hotel\_yacht-6544072.html](https://www.ilgazzettino.it/nordest/venezia/turisti_russi_veneto_venezia_verona_cosa_succede_ora_disdette_seconde_case_hotel_yacht-6544072.html)
 
-批准脸书数字货币？大家现在看到美国决定数字货币的是谁呢？就是美国的SEC主席，SEC主席就是美国证监会，虚拟货币在美国是当成证券交易的，管得非常非常严，可以交易，但你得拿牌照，拿牌照很难。这哥们儿是美国对数字货币最有影响力的发言者，你们可以查查他的名字，兄弟姐妹们。
-
-这个人对虚拟货币的专业知识、对虚拟货币的理解是美国现在的老大，他跟谁最好，他跟我们最不喜欢的人里的谁最好，知道吗？兄弟姐妹们，看谁能猜准。咱战友真厉害，不是王岐山，这哥们挺烦王岐山的，他跟扎克伯格关系好，这个人他是非常欢迎虚拟货币的，他已经很明确，虚拟货币谁也挡不住，一定是人类的未来，美国人是挡不住的，美国人挡住它就是你挡住了所有走向未来的路，这是他说的，但是他是最强调说监管最重要，绝不能让虚拟货币成为洗钱的、偷税的平台，这是他的另外的一个说法。
-
-兄弟姐妹们，这个人一上来当SEC主席，当时我真听说，咱的律师同时也是Elon ·Musk的律师，你们知道吧？当时Elon·Musk被SEC调查说他是诈骗，你们记得吧？要把他FIRE掉，他的律师叫邦迪，邦迪也是我们的律师，非常非常棒的律师，如果川普当时要赢了，就是另外一个人当主席，肯定是咱哥们，那肯定的，我就不说了。
-
-郭文贵**2021**年**11**月**7**日直播
-
-郭文贵先生：一切皆有可能！苹果商店不是我们目标，你也太小看我们了吧？它到时候自然会知道（加入），当你做到一定程度，苹果商店它一定自动求你进去的，一定的。
-
-（喜币）我们要的是什么，知道吗？我们要两样事情：ETF、SWIFT，这是我们的目标。你们太小看我们喜币了……记住我这话，我们的目标叫ETF、SWIFT。
-
-郭文贵**2021**年**12**月**17**日直播
-
-我们来看一下共同富裕，是不是走向共同执政呢？我们看一下现在我们的“习太阳”面临的困境：冬奥会被集体的西方国家外交抵制，中共和习本人的信用是破产了。国内房地产的债务违约，连续暴雷也接近了崩溃的状态。西藏的独立法案，还有经济、金融上将会被踢出WTO、SWIFT，政治上将会被定义为非法政权，将会被踢出联合国。中共体制内你死我活的政治斗争，现在也是处于绞肉机的状态。习本人的身体堪忧，现在习是除了家人没有任何人可以信任。
-
-资料来源：郭先生GTV和盖特直播视频
-
-往期回顾：
-[文•贵天成——文贵先生谈“SWIFT”（一）](https://gnews.org/zh-hans/2113133/)
-[文•贵天成——文贵先生谈“SWIFT”（二）](https://gnews.org/zh-hans/2113327/)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编辑、上传： Xiao  baige
 
  
 
