--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,55 +1,34 @@
 ---
-title: 谷爱凌与十二名食客众目之下跪舔谷俊山的明星并无二致
+title: 新中国联邦人乌克兰战区人道救援首战告捷
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114064/)
+`cindy` [轉載自GNews](https://gnews.org/zh-hans/2114201/)
 
-Youtube视频链接：[https://youtu.be/MEjFskbmuAE](https://youtu.be/MEjFskbmuAE)
+撰稿：澳喜cindy
 
-**郭文贵先生：**就像那个濮阳的谷俊山将军一样，在餐桌上一堆（人）吃饭，喝多了。喝多之前都叫将军呢，突然间把裤子脱下来，“过来，过来，给我舔两下！”某明星就当众12个人的餐桌上，就是毫不犹豫地过去很专业地把手抓住，舔上。谷俊山说：“不错啊，3000万我给你了开演唱会去。”
+俄乌战争已经第十天了，双方两次谈判均无果。俄军人数比乌军多5-10倍，并用导弹狂轰滥炸，快速向各大城市进军，核发电厂被炮弹击中起火。形势相当严峻。
 
-没什么两样！你觉得这个谷爱凌你觉得让她去舔谷俊山的……当众她不舔吗？文疯而动，你跟共产党打过交道，你说她舔不舔？她100%舔！
+乌克兰总统再三喊话普京：“坐下来面谈，我不咬人，你怕什么？”“普京到底要什么”？
 
-你把一个养你长大的美国你玩弄于股掌之中，你觉得美国人都是傻子？你觉得美国人都是没有感情？你吃我的、喝我的、保护你，你回头你去舔共产党去，你舔呗，你别再骂美国、你别再黑美国呀！
+乌克兰总统在新闻发布会上说：“俄军随身带来了焚尸炉 ，世界末日已经到来”。
 
-全人类的民主权利国家、所有有自由的国家都反对这次冬奥会是因为啥？新疆大屠杀、香港大屠杀、台湾大危机！还有锁链女，你用你的所有的一切把锁链女的事情给掩盖住，你把彭帅的事情你给掩盖住，你把新疆大屠杀给掩盖住，你把爆料革命给掩盖住，你把“冬眠会”你一个人要撑起来。
+这确实是够惊悚的。猜测：这可能是普京已经预估到将有大批士兵死亡，将来怎么向国内的百姓交代呢？这种消尸灭迹，数据可以篡改，死无对证。
 
-我告诉你，记住我的话，谷爱凌的娘会为此付出绝对的代价！她把这个孩子毁了，她今天有多出名，她未来就有多惨。她现在给中国人拉的仇恨，她祖宗万辈儿都赎不回来的罪，我告诉你。
+我们看到很多自媒体的视频，采访被俘的俄国士兵：你们知道为什么要打乌克兰吗？他们都说根本不知道，上级告诉他们只是军演。看来这场战争真的只是普京自己需要的战争。
 
-整个西方正在暗藏着一股势力，就是反华反亚裔，她现在把亚裔，（把）韩国、日本全得罪完了，两个冰上强国；然后你又把全世界的华人、亚裔人又跟着西方世界对立。这种不诚实，这种玩弄技巧，所谓的金融操作，几个狗屁的广告费。
+乌克兰总统惊呼：现在已经是世界末日了！
 
-当时她一出来一操作，我就想到当年谷俊山在那个桌上，这个明星到现在还火着呢，这个明星现在还很火，这就是中国。谷俊山进去了，这个明星还在那当明星，你觉得她只舔过谷俊山吗？在整个三座门，进门餐厅，那叫什么菜？谭家菜（还是）什么菜，就在那一个军事重地，文化大革命的总部，前边就是中南海。脱下来裤子，当场跪在那舔。
+鉴于乌克兰局势日益恶化，新中国联邦来自英国、美国、瑞士、加拿大等国家的战友们，几天来不顾自己安危，不辞劳苦，忘我的奔赴战区，准备救人所需的繁杂的事务。昨天成功地从乌克兰轰鸣的炮火中救出了70个乌克兰战区的孩子、母亲和一些中国同胞。乘坐的大巴历经15个小时到达了乌克兰的邻国波兰避难场所。在那里为被救人员筹备物资和生活用品的战友们，连续多日没有休息好，大巴车抵达时，第一时间送上了各种食物和水。并且还安排好了安全的住宿等待飞往各个国家，期间将提供30天以内的免费食宿。
 
-今天有什么两样？精神上的舔，行为上的舔，金钱上的舔，连杀人魔王的手段都舔，连彭帅你都敢这么弄，你在彭帅面前你算个毛儿？现在彭帅被一个副总理给强奸，闭嘴、消失、退休，你替它（共产党）擦地。
+波兰这位热舒夫市长的善良的忠告：“希望中共国站出来反对这场战争”。“不要站在边上看着”。
 
-这个国家真的是，我再说一遍，宁可在西方当狗去……你看那法院判2.6亿啊，它判我2600亿，我也待在美国，我待在美国（当）狗也不到中国这个国家去当它的皇帝去。
+中共何止是不反对普京发动的这场战争，习近平就是普京的坚强后盾。
 
-就这个国家现在丑陋到极点！你看到下边那些网民们，你说人家共产党给你几毛钱呐？给你5毛、给你5万，你就瞪着眼就这样？你想舔谷爱凌的屁股都舔不着，人家谷爱凌还有屁股舔，共产党能给你几分钱？
+接下来，新中国联邦将已安排好的营救专机747、757、大力神运输机，协助华人同胞、美国及其他各国友人免费撤离，目的地为美国和其他安全中转国。作为新中国联邦的一员我们深为有这样的无私无畏的战友们而自豪，没有文贵先生的智慧和决策和非常好的信誉，各个复杂的环节可能很难在如此短的时间里做到这么完美。看了整个过程， 真的让人感动。被救的人素不相识，甚至连彼此的姓名都不知道，只是为了救人一命。这是新中国人的伟大壮举！可赞可颂！
 
-编辑整理：Jacques；
+*编辑：cindy*
 
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
 
  
 
