--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,27 +1,18 @@
 ---
-title: 秘翻在线：美乌总统再通电话共商对乌支援及对俄持续制裁
+title: 视频&#124;（战争下的乌克兰儿童）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114002/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114182/)
 
-**撰稿：青衣**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/22-3.jpg)
-乌克兰总统泽伦斯基3月6日再次与美国总统拜登通电话，共同商议对乌克兰的安全与财政支援，以及对俄罗斯的持续制裁。德国智库专家表示，大规模制裁势必重创俄罗斯经济。
+制作：香草山视频部
 
-据《阿波罗新闻网》3月6日报道，乌克兰总统泽伦斯基（Volodymyr Zelensky）发推文称，他已与美国总统再次对谈，谈话内容包括安全问题、对乌克兰的财政支援，以及继续向俄罗斯实施制裁。
+然而，战火依然给乌克兰民众带来了无尽的创伤，尤其是那些患病的儿童：不只是病痛，危险与不安定的环境让他们的生存变得更加艰难。
 
-白宫也证实双方领导人再次通了电话，两人对谈了约30分钟。
+发稿：林礼
 
-白宫表示，拜登与泽伦斯基通电话时说，很高兴看到Visa和万事达卡（Mastercard）等国际信用卡公司暂停在俄罗斯业务的决定。拜登总统在电话中还表示，他的政府正在增加对乌克兰安全、人道主义和经济援助，并与国会密切合作，以确保获取额外资金。
-
-对于欧美国家向俄罗斯祭出史无前例的经济和金融制裁，德国智库学术暨政治基金会（Stiftung Wissenschaft und Politik）东欧专家克鲁格（Janis Kluge）认为，如此大规模的制裁措施势必会重创俄国经济，俄民间不满情绪会继续升高，进而进一步动摇普京的领导地位。
-
-据克鲁格预计，西方接下来可能将会对俄国实施石油禁运。
-
-**新闻链接：**
-
-[https://m.soundofhope.org/post/600202](https://m.soundofhope.org/post/600202)
-
-[https://www.aboluowang.com/2022/0306/1717134.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0306/1717134.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
