--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,19 +1,25 @@
 ---
-title: 乌克兰总统泽连斯基发推感谢特斯拉总裁埃隆·马斯克
+title: 视频&#124;俄罗斯戒严征兵升级致大量民众外逃
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2113897/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114127/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-499.png)（图片源自本文链接）
-共同通讯社3月6日消息：6日，正处俄罗斯侵略战火中的乌克兰总统泽连斯基在短文发布网站推特上感谢美国特斯拉首席执行官埃隆·马斯克提出支持高速互联网通信服务。他还透露，他和马斯克先生曾讨论过太空探索。
+制作：香草山视频部
 
-这项服务被称为星链(Starlink)，由马斯克先生领导的美国太空创业公司太空船公司(SpaceX)开发。由于它使用的是卫星系统，预计即使在地面线路设施在战斗中被破坏的地区也能使用互联网。
+当地时间3月4日，据相关媒体报道，随着俄乌战争局势的恶化，俄罗斯当地民众对当局可能或正在实施的戒严令、暴政和征兵措施愈发恐惧和担心。为此，大量的俄罗斯人正在试图逃往国外。
 
-信息来源：[ウクライナ大統領が謝意　通信支援でテスラCEOに（共同通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/097e14e6d83b13b7db2d433190ec085459e9819f)
+报道提及，那些外逃的俄罗斯人主要是担心该国即将到来的军事动员行动，他们大多都不愿意参与战争。因此，很大一部分人可能此生都不会再回到莫斯科。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+资料显示，除了邻近的欧洲国家和中东地区外，美国也是这些外逃俄罗斯人的主要目的地：上万名绝望的俄罗斯人正在试图通过墨西哥入境美国，寻求联邦政府的庇护。美国海关和边境保护局的数据表明，2022年的前两个月中，接近六千名俄罗斯人正在等待美国政府的庇护。
+
+另据俄罗斯抗议监督组织数据显示，自2月24日俄乌开战以来，俄罗斯境内大约有超过七千六百人因反战示威而遭到拘禁。
+
+发稿：林礼
+
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
