--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,32 +1,47 @@
 ---
-title: 乌克兰救援3.5. 新中国联邦美国与欧洲救援团都已抵达现场并开展救援
+title: 被谷爱凌激怒的美国斯坦福面包店老板怒吼华人滚回中国
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114245/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114354/)
 
-撰稿：DG
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture221.png)
-2022年3月5日，NFSC救援行动纽约团队抵达华沙。前线总指挥大卫在盖特上直播采访了一个别救的中国留学生和当地市长。
+Youtube视频链接：[https://youtu.be/GJ8H7NogQTM](https://youtu.be/GJ8H7NogQTM)
 
-2022年3月5日9:49PM（美东时间，乌克兰基辅时间6日早上4:49AM），NFSC救援行动电报群组里更新了大巴时间表。
+**郭文贵先生：**我们今天坐这直播的时候，兄弟姐妹们，你们有想过吗？你们有孩子以后到了美国、西方，这些美国人怎么看我们？头两天在斯坦福我们一个华人战友他说：“坏了，郭先生，我现在在斯坦福就突然发现谷爱凌的事件让我在斯坦福让我感觉倍加孤独。
 
-3月5日 – 3月6日， 2班 X 50 座
-3月7日起2星期: 2班X50座，2班X59座，1班X58座，1班X56座，1班X50座2022年
+我最爱吃的面包店也是他最爱吃的面包店，他说：“七哥，你知道咱俩最爱吃的面包店我去了，人家面包店的老板说什么吗？‘你们中国人就不应该待在美国，就应该滚回你们的国家去！’（过去）这个人对我多有好，（现在）愤怒的眼光大早晨对着我。”
 
-3月5日前线总指挥大卫在盖特上直播介绍当地的情况，大卫说：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-11.png)
-我们是来救人的，救人靠情报、资源，靠对当地环境的了解。这几天需要躲避交通拥堵和涌来的大量难民和不安全因素比如在局部边境已经发生了抢、盗这样的现象。还有就是已经开始出现对华人排斥的现象，比如有的留学生无法搭乘巴士、卡车、私家车，因为你是华人。他们本能的抗拒或反感。
+你知道这个战友跟我说完以后，我当时我就在这外边，我在这康州我就住在这个外边，我站在那，你知道我真的是浑身发抖。我能感觉到大地在颤抖，美国人在愤怒！
 
-另外通报一下，前些天在社交媒体上流传的那些诋毁、抹黑、恶意评价乌克兰这场战争和饱受灾难的居民的视频，国内这些小粉红们垃圾人，他们的视频在乌克兰大肆传播并被翻译成多种语言，又被转给乌克兰正在逃难的人，甚至乌克兰正在战斗的人，你想想这意味着什么？！所以现在乌克兰在迷茫失望之中，可能又多了一份可能潜在的待爆发的仇恨，这就是中共给华人洗脑以后这些脑残们在海外的恶意言行带来的灾难。
+想什么呢战友们？你以为这直播在跟你聊天呢？战友们，你们直播你们花时间你们花精力，过去五年七哥的直播，共产党罚走了130亿美元，这美国又罚我2.6亿美元，倾家荡产、老娘没命、全家被抓，所有的钱都弄完，连老爹都是被扔在街头，同事无工作可做。
 
-我现在能感受到包括昨天七哥一再问我，“你有没有感到危险”，我说句心里话我担心，我从当地人的眼神里他们的绝望也可能成为仇恨，这是我们面临的情况。也是我们为什么来到这里，直播，也是我们新中国联邦为什么会把这辆大巴，用实力展示在乌克兰境内把60多人拉到这个波兰的火车站，没有实力没有之前的准备是不可能做到的，战友们！
+你们直播是花时间，我直播是花命、流血，不仅流汗还流血。七哥看着嘻嘻哈哈的，过去的直播每一秒钟都在与邪恶斗争。咱们“流水”，叫这边流着水，七哥那边就流着血，你们“流水”了，七哥就流血了，一定的，是吧？
 
-而且现在在乌克兰境内只有一个还能安全撤离的来这里的通道就是：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-10.png)
-原文链接：[https://www.gettr.com/streaming/py8k3mecdc](https://www.gettr.com/streaming/py8k3mecdc)
+我们就今天这问题咱好好谈谈，是吧？咱别整大家这脸一脸严肃，是不是？共产党还没死呢，你们别这样，共产党死了你们再这样。谢谢，我先说到这儿，谢谢谢谢！开始主持人。
 
-校对发布： Shifter
+编辑整理：Jacques；
 
+字幕文件制作：小满；
 
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
