--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,27 +1,34 @@
 ---
-title: NewSGman┃台湾大停电 （ 3月3日）
+title: 秘翻在线：辉瑞新冠疫苗竟有1291种副作用 ！这哪是疫苗分明是毒苗！
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2113789/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2113962/)
 
-撰稿：东京樱花团/NewSGman
+**撰稿：青衣**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screenshot-2022-03-06-144438.jpg)
+近日，辉瑞公司被迫公布了部分中共病毒疫苗数据文件，其中提到的副作用竟然高达1291种！震惊了世界。
 
-3月3日上午台北市、新北市及苗栗台中、台南、高雄等多个县市纷传出停电情況。
+据《大纪元》3月5日报道，美国食品药品监督管理局（FDA）3月1日公开了一份辉瑞（Pfizer）新冠疫苗数据文件，其中提到了高达1291种副作用。这些副作用包括肾脏损伤、急性弛缓性脊髓炎、脑干栓塞、心脏骤停、出血性脑炎等等。这哪里是疫苗，分明是毒苗！
 
-全台湾无预警大停电交通设施无法使用多人被困电梯。
+自中共病毒爆发以来，全世界各国就致力于疫苗接种计划。目前全球疫苗接种总剂数已达108亿剂。有44亿人已完全接种了疫苗，也就是至少接种了两剂。然而疫苗丝毫没有起到防疫作用，反而加重了病毒的变异和传播。两年多过去了，中共病毒目前依然还在肆虐全球。
 
-银行作业受阻。
+爆料革命和新中国联邦创始人郭文贵先生一早就反复警告世界：疫苗无用，且疫苗是比病毒还要毒的“毒苗”！辉瑞公布的疫苗数据文件再次应证了郭先生的断言。
 
-总统府表示因高雄兴达电厂开关场事故导致南部地区电力供需失衡。
+辉瑞公布的疫苗文件还显示，仅截至2021年2月28日，就收到42086名在接种疫苗后出现异常事件的个案，共涉及158893宗异常事件，其中有1223人死亡。
 
-总统府发言人张惇涵表示，蔡总统已指示会尽速厘清完整事故原因于最短时间向各界报告，并尽速恢复供电。
+美国关注健康团体“儿童健康防御”（Children’s Health Defense）总裁兼总法律顾问玛丽·霍兰德（Mary Holland）形容这份文件是爆炸性新闻。霍兰德认为应立即终止接种辉瑞疫苗，因为出现严重伤害的可能性非常明显，而受害人却不能起诉辉瑞公司要求赔偿。
 
-台电紧急召开供电状况说明新闻发布会。
+根据美国政府“疫苗不良事件报告系统”（Vaccine Adverse Events Reporting System）的数据显示，从2020年12月中到2022年2月18日，就有113万多宗接种中共病毒（Covid-19）疫苗不良事件报告，其中有24402人死亡。
 
-盖特链接：[https://gettr.com/post/pxvy4h5557](https://gettr.com/post/pxvy4h5557)
+此外，美国还有4021宗心肌炎和心包炎病例与中共病毒疫苗有关，包括643宗12岁至17岁儿童的心肌炎和心包炎报告。这其中，2475宗与辉瑞有关；1364例与莫德纳有关；171例与强生有关。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+尽管新中国联邦爆料革命两年多来一直在大力传播病毒和疫苗真相，而全世界也有诸多科学家、医学家、疫苗及病毒学家也早就在呼吁停止接种新冠疫苗，但疫苗的接种却还在继续。如今，辉瑞新冠疫苗如此触目惊心的副作用数据被公布，世界该清醒了吧！
+
+事实证明，新冠疫苗无用，它只是杀人赚钱的工具！据英国《卫报》报道，辉瑞新冠疫苗去年获得近370亿美元的销售额，成为历史上最赚钱的产品之一。
+
+**新闻链接：**
+
+[https://www.epochtimes.com/gb/22/3/5/n13623663.htm](https://www.epochtimes.com/gb/22/3/5/n13623663.htm)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
