--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,11 +1,29 @@
 ---
-title: 塔斯社被黑：显示反战信息
+title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年3月5日晚
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2113088/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2113176/)
 
-02/28/2022 据路透社报道，俄罗斯国家通讯社塔斯社的网站据信已被黑客入侵，显示出了反战信息。
+作者：香草山翻译部
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Gnews-image-5.png)![](https://assets.gnews.org/wp-content/uploads/2022/03/text-SC-1-1.png)
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+
+校对：Stay文苑
+
+编辑：Stay文苑
+
+发稿：Stay文苑
+
+新闻：[https://gettr.com/post/pyf9rc53d8](https://gettr.com/post/pyf9rc53d8)
+访谈：[https://gettr.com/post/pyf2befaf2](https://gettr.com/post/pyf2befaf2)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-524x720-3-4.jpeg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
