--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,36 +1,42 @@
 ---
-title: 拜登政府将对中共国商品关税展开审查
+title: 新闻述评：乌克兰公开优待战俘令普京愤怒
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2114186/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2114333/)
 
-**撰稿：日本东京方舟农场 北极**
+作者：东京樱花团｜捆绑CCP一千年
 
-美中第一阶段贸易协议期限已届，中共没有兑现其采购承诺，拜登政府是否祭出惩罚性关税，或展开新的贸易政策，受到外界关注。 图为美国加州长滩港集装箱运输。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/新闻述评：乌克兰公开优待战俘令普京愤怒.png)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/拜登政府.png)（图片来自大纪元）
+**乌克兰国防部表示允许被俘的俄罗斯人联系亲人，遵循日内瓦公约优待战俘，在网站公开战俘联系方式。这一举措激怒了克里姆林宫，并阻止俄罗斯人联系自己的亲人，怒斥乌克兰总统是新纳粹分子。**
 
-据大纪元3月06日报道，美国即将对价值340亿美元的第一批中共国商品关税展开审查。
+据[乌克兰自由电台](https://www.radiosvoboda.org/a/news-poshuk-poloneni-rf/31737995.html)5日消息，“乌克兰国家安全和国防委员会的工作人员透露，他们正在创建一个“战俘营”网站，公布有关从 2022 年 2 月 24 日开始入侵乌克兰领土被俘的俄罗斯战俘的信息。”乌克兰国防委员会声明，将遵照“日内瓦公约”中《[战俘待遇公约](https://www.ohchr.org/EN/ProfessionalInterest/Pages/TreatmentOfPrisonersOfWar.aspx)》的规定，给他们食物、衣服和治疗，并保持正常状态。
 
-根据《贸易法》第301条规定，进口商品关税在征收四年后到期，美国贸易代表办公室有权对其进行审查。审查需要在其可能结束前的60天内进行，第一批340亿美元的中国商品将在接下来的几个月内到期，即7月6日。
+消息称，国家安全和国防委员会打击虚假信息中心表示，俄罗斯战俘的亲属可以联系乌克兰国防部的代表，与自己被俘的亲人取得联系，并且俄罗斯公民，包括士兵家属或其熟人，可以在官网获取有关囚犯状况和下落的信息。
 
-即使在俄罗斯入侵乌克兰导致大宗商品供应收紧之后，拜登政府没有发出取消关税的计划的信号， 通胀率目前已超过7%，从能源到小麦的价格都在飙升。
+- ***延展阅读：***[***乌克兰马里乌波尔市沦陷，俄军挟持了该市的40万平民***](https://www.pravda.com.ua/news/2022/03/6/7328636/)
 
-拜登总统保留了前任川普总统对中欧工国商品征收关税的政策。川普政府期间先后征收了4次关税：2018年7月份以来，美国先是对340亿美元商品征收25%关税，随后对160亿美元商品征收25%关税，然后扩大到对2000亿美元关税征收10%关税，到2019年5月再将2000亿美元商品的关税提升到25%。
 
-2020年初，特朗普和中国国家主席习近平达成协议，签署了第一阶段协议。中国同意增加对美国商品和农产品的购买，即比贸易战开始前多购买2000亿美元。
+乌克兰国防部这一举措对俄罗斯普京政府颇具杀伤力，原因是这会瓦解俄军内部士气。根据[乌克兰在线新闻](https://www.pravda.com.ua/news/2022/03/4/7328078/)透露，“俄罗斯人权监察员塔蒂亚娜·莫斯卡尔科娃（Tatiana Moskalkova）呼吁红十字国际委员会帮助寻找和协助在乌克兰的俄罗斯战俘，希望确定被捕的俄罗斯军人的下落，并确保他们在国际法下得到乌克兰政府的保护和帮助，包括医疗权。”
 
-但中国未能实现这些目标。 追踪中国采购情况的彼得森国际经济研究所高级研究员乍得·鲍恩（Chad Bown）表示，中国有望只采购其承诺购买的商品的60%。
+据称，这些被派往乌克兰作战的俄罗斯士兵自首后，乌克兰为他们提供医疗服务，并让他们有机会打电话给亲人。乌克兰还收集囚犯数据并将其发布在一个特殊的网上“[战俘营](https://invaders-rf.com/?fbclid=IwAR21EvNHKV7_F1JDokbFVL1PbqTXsjrJY81nj3O5mWiKWu8TQLUZ1cbPQuU)”上，以便他们的亲属找到他们的孩子、父母和孙子孙女。在通话过程中，战俘们对他们的亲属说，他们得到了很好的待遇，得到了医疗服务、食物和温暖，这一切都记录在照片和视频中。”
 
-拜登几个月前表示，这就是他保留关税的原因。
+当确定乌克兰优待战俘消息后，俄罗斯普京政府崩溃了，他们采取了共产党一样的愚蠢做法，即阻止其公民获取真实信息，邪恶的普大帝试图阻止乌克兰网站发布俄罗斯士兵在乌克兰土地上被杀和俘虏的照片和视频，同时不让俄罗斯母亲将死去的儿子带回家。这一人道主义关怀彻底激怒了普京，[普京对着摄像头说，“乌克兰领导人为是‘一群吸毒者和新纳粹分子](https://www.pravda.com.ua/news/2022/02/25/7325841/)’。”这恐怕是普京向习近平学习到最好的谎言技巧之一——纳粹称反纳粹军为纳粹，并谎称“乌克兰大规模拘留抗议战争的人 ”。
 
-参考链接：
-[https://www.epochtimes.com/b5/22/3/5/n13624781.htm](https://www.epochtimes.com/b5/22/3/5/n13624781.htm)
-[https://www.bbc.com/zhongwen/simp/business-48770168](https://www.bbc.com/zhongwen/simp/business-48770168)
+- ***延展阅读：***[***乌克兰真理报 – 三千名美国退伍军人将为乌克兰而战***](https://www.pravda.com.ua/news/2022/03/6/7328675/)
+- ***延展阅读：***[***普京吁占领军推翻泽连斯基政府，建立军政权***](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20220225-%E6%99%AE%E4%BA%AC%E8%A6%81%E6%9B%B4%E6%8D%A2%E4%B9%8C%E5%85%8B%E5%85%B0%E6%94%BF%E5%BA%9C-%E6%89%B6%E6%8C%81%E5%86%9B%E6%94%BF%E6%9D%83)
 
-素材采编：北极
-编辑：老孙
-发布：Linda
 
+这是乌克兰军方在战时对待战俘问题上采取的最为积极透明的人道主义关怀政策，这也正是乌克兰采取与众不同的做法，开启了一场“直播战争”的手法，将侵略者的行为公布到互联网上，使正义不被谎言所掩盖，诸如普京向乌克兰军喊话这类谎言：
+
+*普京说：“我再次呼吁乌克兰武装部队的军人：不要让新纳粹分子和卢德主义者利用你的孩子、妻子和老人作为人盾。把权力掌握在自己手中。看来，我们与你们谈判比与这伙在基辅定居并劫持整个乌克兰人民的吸毒者和新纳粹分子谈判更容易。”*
+
+顺便提醒普京，习近平类谎言的本质是，[把本国发展进步的前途命运牢牢掌握在自己手中](https://news.bjd.com.cn/2021/11/27/10009927.shtml)，这类谎言的本质是共产主义 。共产党把权利看做生命，当它在向弱者喊话时，总是许诺权利，最后人们发现，把权力掌握在自己手中的不是人民，而是纳粹统治阶级——共产党。这就是中国共产党的本质，它继承了前苏联的谎言和纳粹主义思想，造成了今天全球性的人道灾难。如今，普京强人形象轰然倒塌，取而代之的是习近平式的谎言，在这场出师不利的战况下，普京对于乌克兰“优待战俘”做法感到恐惧。事实证明，天下独裁者都有一个共同点——害怕真相。
+
+2022年3月6日
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
