--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,24 +1,36 @@
 ---
-title: 视频&#124;俄罗斯战俘呼吁俄军士兵不要做炮灰
+title: 乌克兰救援03.05 如何报名参与新中国联邦乌克兰大救援？
 ---
-`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114171/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114319/)
 
-制作：香草山视频部
+撰稿：文字烧
+![](https://assets.gnews.org/wp-content/uploads/2022/03/的的Picture1.png)
+新中国联邦、法治基金乌克兰救援特别行动3月5日报道，乌克兰大救援正在紧张进行中，很多看了现场直播的战友也想参与到救援行动中，那如何报名以及需要哪些条件呢？
 
-3月4日，据盖特消息显示，被乌克兰俘获的俄罗斯士兵近日陆续通过视频向外界传递出他们被蒙骗出战以及其自身对战争的拒绝。
+**目前还需要50名以上的战友，所需条件是**：
 
-这些俄罗斯士兵表示，他们在出战前根本不清楚这次战争的对象和性质，而他们对此的任何疑问则全部遭到上级长官粗暴的拒绝与封口。更有士兵提到，直至进入乌克兰后他们才清楚，这次战争的目的是为了侵略乌克兰，而不是“解救”乌克兰民众。
+1. 必须要有两周的时间可以待在前线；
+2. 一定要有入境波兰的签证、护照或者许可证；
+3. 特别需要会俄语、乌克兰语、德语、波兰语的战友。
 
-至于俄罗斯当局在交战中采取的手段，这些士兵证实，俄军不仅不会帮阵亡的将士收尸，甚至还会将伤残的俄军士兵就地处死并焚毁。
 
-为此，这些俄罗斯士兵在视频中声明，他们实际上是受到了政府的欺骗，他们既不愿意侵略乌克兰，也不愿意成为这场独裁者战争的炮灰。这些士兵也向所有的俄军将士呼吁， 请大家不要再受政府的蒙骗，成为独裁者的牺牲品。同时，他们也号召俄罗斯人民站起来反对普京，停止这场毫无意义的战争，停止这场人类的灾难。
+**报名方式：**
 
-发稿：林礼
+扫直播中的二维码填表报名，或填下表报名：
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+[https://docs.google.com/forms/d/e/1FAIpQLSfOtBItSadegaI7sYL-SzAmuzVCbmr3HC7oiDqKD06auVxRhw/viewform](https://docs.google.com/forms/d/e/1FAIpQLSfOtBItSadegaI7sYL-SzAmuzVCbmr3HC7oiDqKD06auVxRhw/viewform)
+
+温馨提示：
+
+1. 后台客服只会回复表格上符合条件的战友，如果没有回复，说明不符合条件。我们会根据您的情况评估到了当地是否有安全保障。
+2. 报了名却没有办法去的战友，可以在后方继续做物资供给、协调、文宣等维持农场正常运营的工作，大家都有力可出，有地方可以使劲。
+3. 请不要给前线的战友发私信报名，不管是前方的大卫哥，还是在后方做总调配的长岛哥，他们都没有时间处理私信。
+4. 我们不是去旅游，我们是去参加一场救人的战役，如果被选上，一定要作好心理准备。
+
+
+直播链接: [https://gettr.com/post/py8k3mecdc](https://gettr.com/post/py8k3mecdc)
+
+校对发布：Shifter
 
  
 
