--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,45 +1,31 @@
 ---
-title: 徐州锁链女张首晟马云和偷、骗、蓝金黄美国的国有企业
+title: 英情报：俄军视乌人口密集区为目标
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114129/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2114266/)
 
-Youtube视频链接：[https://youtu.be/CZcXkxOKcLA](https://youtu.be/CZcXkxOKcLA)
+文 :林辉智
+发布 :2022年3月6日 4:07 PM
+采集：玫瑰新闻组
 
-**郭文贵先生：**锁链女这件事情，三周五大决策，变了五个故事，全国人民都造假，中国人的冷漠！一个如此的美女、如此的青春年华，差两分考上大学，结果24年生了八个娃。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3062.jpg)英国情报指出，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区。（彭博社）
 
-你想想这24年她怎么的也得被这个男人和别的男人被全裸性地虐待性地，你想想那个性交的场面是多惨？一个十几岁的女孩子被一个完全不省人事的猪头在那块玩弄在性交，生出八个娃。八个娃花八年，再怀孕八年，这个女的24年都干啥了？基本上她比性奴隶还可怕！全国人民沉默。
 
-中国有多少这样的人？外交部撒谎，中国人民撒谎，中国人民沉默，你觉得还救的了吗？瞪着眼在谷爱凌的面前，不知道在给华人…….你们每个人都记住我的话，谷爱凌现在伤害到你们的这个毒是她妈妈拿着那个几百万美元的广告费，她拿几百亿都无法挽回的。
+（早报讯）英国情报称，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区，但他们面对的抵抗力量正在减缓其军事推进。
 
-美国人那个愤怒，七哥是有感受的，他说：“你看看你们华人，到了美国在美国长大以后就这样干，百人计划、千人计划……”单伟建，张首晟，马云来骗钱，中国国有企业，到美国来就是一个骗、偷，然后“蓝金黄”。你说华人有啥形象现在？
+路透社报道，英国军事情报部门在一份最新报告中说：“乌克兰抵抗的规模和力量继续让俄罗斯感到惊讶。”
 
-字幕来源：[2022年1月31日 《春节大直播》 全文字版（一）](https://gnews.org/zh-hans/1943980/)
+报告说，作为回应，俄罗斯将“以多个人口密集区作为目标，包括哈尔科夫（Kharkiv）、切尔尼戈夫（Chernihiv）和马里乌波尔（Mariupol）。”
 
-编辑整理：Jacques；
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3013.png)
 
-字幕文件制作：小满；
+英国军事情报部门说：“俄罗斯1999年曾在车臣，2016年在叙利亚使用过类似的战术，并同时使用了空中和地面的弹药。”
 
-视频制作及上传：Cindy；
+俄罗斯一再否认该部队将平民地区作为军事目标。
 
-G-News发布：小满；
+新闻链接：[英情报：俄军视乌人口密集区为目标](https://www.zaobao.com.sg/realtime/world/story20220306-1249505)
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+审核校对：Barry Jack
+上传排版：V在途中
 
  
 
