--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,35 +1,25 @@
 ---
-title: 拜登政府将对中共国商品关税展开审查
+title: 再见了——俄罗斯游客
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2114186/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2114231/)
 
-**撰稿：日本东京方舟农场 北极**
+#### 编译/简评                 意大利达芬奇农场                            小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Schermata-2022-03-06-alle-09.07.26-1.png)图片来源：ilgazzettino.it
+两年的新冠病毒疫情及乌克兰危机给意大利旅游业造成了致命性的打击。
 
-美中第一阶段贸易协议期限已届，中共没有兑现其采购承诺，拜登政府是否祭出惩罚性关税，或展开新的贸易政策，受到外界关注。 图为美国加州长滩港集装箱运输。
+仅以复活节来看，没有来自莫斯科的游客会给意大利旅游部门造成两千万欧元的损失。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/拜登政府.png)（图片来自大纪元）
+俄罗斯游客与美国游客和中国游客一起被认为是最能花钱的。他们是五星级酒店和高级时装的消费者， 2019年有一百七十万俄罗斯人来意大利旅游。
 
-据大纪元3月06日报道，美国即将对价值340亿美元的第一批中共国商品关税展开审查。
+据意大利旅游协会统计，2021年米兰是俄罗斯客人喜欢购物的城市，免税商品销售额的39%是卖给了俄罗斯客人。撒丁岛特别是翡翠海岸，是俄罗斯豪华游艇的最爱， 但现在他们却逃离了那儿。受重创的北方城市威尼斯、维罗纳2021年由于受疫情的影响， 俄罗斯游客减少了90%以上， 而仅在2019年仅威内托一个大区就接受了一百万的俄罗斯游客。由于乌克兰危机，美国游客纷纷取消预定的意大利假期，对于中国人目前还毫无限制，但受到了新冠疫情限制措施的影响。而恰恰是俄罗斯人、美国人和中国人是最大的旅游消费群体。
 
-根据《贸易法》第301条规定，进口商品关税在征收四年后到期，美国贸易代表办公室有权对其进行审查。审查需要在其可能结束前的60天内进行，第一批340亿美元的中国商品将在接下来的几个月内到期，即7月6日。
+欧盟对俄罗斯的制裁会给本来处于危机的旅游业更是雪上加霜。旅游业比起其他行业来说是首当其冲，深受其害。如果中共发动对台战争，今天的俄罗斯人在世界所处的状况就是明天中国人的写照。中共不灭，中国人和世界人民都要为此付出巨大的代价。
 
-即使在俄罗斯入侵乌克兰导致大宗商品供应收紧之后，拜登政府没有发出取消关税的计划的信号， 通胀率目前已超过7%，从能源到小麦的价格都在飙升。
 
-拜登总统保留了前任川普总统对中欧工国商品征收关税的政策。川普政府期间先后征收了4次关税：2018年7月份以来，美国先是对340亿美元商品征收25%关税，随后对160亿美元商品征收25%关税，然后扩大到对2000亿美元关税征收10%关税，到2019年5月再将2000亿美元商品的关税提升到25%。
 
-2020年初，特朗普和中国国家主席习近平达成协议，签署了第一阶段协议。中国同意增加对美国商品和农产品的购买，即比贸易战开始前多购买2000亿美元。
+原文链接：[https://www.ilgazzettino.it/nordest/venezia/turisti\_russi\_veneto\_venezia\_verona\_cosa\_succede\_ora\_disdette\_seconde\_case\_hotel\_yacht-6544072.html](https://www.ilgazzettino.it/nordest/venezia/turisti_russi_veneto_venezia_verona_cosa_succede_ora_disdette_seconde_case_hotel_yacht-6544072.html)
 
-但中国未能实现这些目标。 追踪中国采购情况的彼得森国际经济研究所高级研究员乍得·鲍恩（Chad Bown）表示，中国有望只采购其承诺购买的商品的60%。
-
-拜登几个月前表示，这就是他保留关税的原因。
-
-参考链接：
-[https://www.epochtimes.com/b5/22/3/5/n13624781.htm](https://www.epochtimes.com/b5/22/3/5/n13624781.htm)
-[https://www.bbc.com/zhongwen/simp/business-48770168](https://www.bbc.com/zhongwen/simp/business-48770168)
-
-素材采编：北极
-编辑：老孙
-发布：Linda
+编辑、上传： Xiao  baige
 
  
 
