--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,31 +1,41 @@
 ---
-title: 克里姆林宫的私人飞机前往华盛顿是要接回被驱逐的俄罗斯外交官？
+title: 对共产党必欲除之而后快的七哥和爆料革命必须谋定而动
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114350/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114393/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-29.jpg)
-图片来源：谷歌图片
+Youtube视频链接：[https://youtu.be/TF3i3tnoN3E](https://youtu.be/TF3i3tnoN3E)
 
-《零对冲》一架俄罗斯政府喷气式飞机已经离开圣彼得堡，正在飞往华盛顿的途中，这是美国东海岸居民周六凌晨醒来时听到的令他们惊讶的消息。
+**郭文贵先生：**我也很想去日本，我也想去英国，因为欧洲有太多战友了。你想想那个画面——我到了英国，是吧？在罗斯柴尔德的白金汉宫旁边的俱乐部跟着大卫，是吧？我们坐在那块跟战友们一起，英国的老马、卓玛、N个战友，还有我现在的文园、1818，是吧？一堆坐在那抽着雪茄，是吧？给大家直播的感觉多好，直播直播着英女王来了：Hello！！！然后给弄杯咖啡喝，是吧？那感觉是多爽，是吧？老是心中有这种躁动。
 
-社交媒体上议论炸了锅——一些人最初想知道：这是否是俄罗斯总统普京要与拜登总统进行特别一轮谈判？
+你再想想到了日本，在日本的帝国饭店旁边儿，还有在咱们的基地上、在山上。日本人家穿着和服、做着菜，旁边露出一条大腿——是魔女的，旁边突然响起了文艺的歌声，是吧？然后俩人打起来了，打得……然后马拉多纳甩着一头的长发在中间劝架，是吧？还有我们的二尊夫妻、小白，是不是？还是日本人那么多战友，这时候打得唏拉呼啦，喝着清酒。然后我们再（此处说两句日语）是吧？讲着日文、唱着日本歌，就是很开心的事儿，很浪漫、很幸福。
 
-不幸的是，这些怀疑被证明是不正确的，实际上几乎是不现实的。美国国务院发表声明，确认这架飞机将接走因入侵乌克兰而被联合国驱逐出境的俄罗斯外交官。 国务院将被逮捕的雇员描述为“俄罗斯情报人员”。 俄罗斯外交部在发布给 电报（Telegram ）的一份声明中证实，这架飞机是去接载被驱逐的俄罗斯外交官。
+但是兄弟姐妹们，一切都是要记住，七哥知道，共产党最想灭的是七哥和爆料革命，它一定不会得逞。如果没有这种运筹的情况下，七哥怎么能行动？那么莽撞的行动，七哥能活到今天吗？你们的担心七哥心领了，永远记住了。在这个话题上，今天之前提前练了很久，就是说千万别激动我，我怕一说就搂不住了，水就下来了。但是我今天轻松地说出来，但是我相信你们都懂了，很让七哥感动。
 
-预计该航班将在下午某个时间降落在杜勒斯国际机场。
+编辑整理：Jacques；
 
-截至周六东部时间 1030 点，伊留申 Il-96-300（在俄罗斯国家运输公司/俄罗斯特种飞行中队注册为 RA-96019）向西飞行，目的地为纽约市。 根据飞行地图，这是它最近一次沿格陵兰附近飞行。
+字幕文件制作：小满；
 
-俄罗斯周二将这一驱逐在纽约联合国工作的外交官行为定义为“升级”。 别忘了，即使是伊朗和朝鲜外交官也被允许毫发无损地往返于联合国。
+视频制作及上传：Cindy；
 
-飞行数据显示，俄罗斯总统弗拉基米尔·普京本人并不常用这架喷气式飞机。 指出普京常用的应该是两架编号157715 或 157716的飞机。而事实上，目前正在飞行的 Ilyushin Il-96-300 确实经常从克里姆林宫起飞的飞机。
+G-News发布：小满；
 
-由于美国和欧盟对俄罗斯亿万富翁、政治家和其他普京总统的盟友实施一系列制裁，这次飞行引起了西方观察家的兴趣。 目前，乌克兰正在呼吁北约在乌克兰设立一个“禁飞区”，而北约一直不愿下令这么做，因为正如延斯·斯托尔滕贝格将军所明确表示的那样，如此做法，可能会将北约卷入第三次世界大战。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-译者：这是一篇字里行间耐人寻味的报道，在这报道发表后不久，推特上路透社发了一个“乌克兰总统将会晤拜登“及“普示将会见以色列总理”的推。而拜登总统要求在乌美国人“立即”离开乌克兰，飞往华盛顿的私人飞机到底坐的是谁？这是一次为和平所做的最后努力？还是摊牌？
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-原文链接：[https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un](https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un)
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
