--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,31 +1,33 @@
 ---
-title: 英情报：俄军视乌人口密集区为目标
+title: 李嘉诚家族出售英国最大配电公司
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2114266/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2114321/)
 
-文 :林辉智
-发布 :2022年3月6日 4:07 PM
-采集：玫瑰新闻组
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3062.jpg)英国情报指出，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区。（彭博社）
+整理：围剿维尼熊
+编辑：skyandmoon2012
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/6-32.png)图片来源：雅典娜设计组
 
 
-（早报讯）英国情报称，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区，但他们面对的抵抗力量正在减缓其军事推进。
+根据网易新闻3月4日讯，据彭博社报道：由澳大利亚投行麦格理集团和全球私募巨头KKR牵头的财团正在与李嘉诚家族洽谈关于收购其旗下资产UK Power Networks的事宜。
 
-路透社报道，英国军事情报部门在一份最新报告中说：“乌克兰抵抗的规模和力量继续让俄罗斯感到惊讶。”
+UK Power Networks是英国最大的配电公司，估值高达150亿英镑（约合人民币1260亿元）。参与竞标的机构还包括荷兰退休金机构APG、中投（CIC）、安大略省教师养老金计划委员会和加拿大养老金投资管理公司PSP Investments。
 
-报告说，作为回应，俄罗斯将“以多个人口密集区作为目标，包括哈尔科夫（Kharkiv）、切尔尼戈夫（Chernihiv）和马里乌波尔（Mariupol）。”
+过去十多年间，李嘉诚家族在英国的总投资超过4000亿港币（约合人民币3200亿元）。李嘉诚家族还拥有英国最大的电信运营商、全英国最多的连锁酒吧门店。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3013.png)
+不过自2020年起，李嘉诚家族已陆续出售英国乃至欧洲的部分资产。
 
-英国军事情报部门说：“俄罗斯1999年曾在车臣，2016年在叙利亚使用过类似的战术，并同时使用了空中和地面的弹药。”
+资料来源：[李嘉诚家族出售英国最大配电公司](https://www.163.com/dy/article/H1LEE0N00550U0A7.html)
 
-俄罗斯一再否认该部队将平民地区作为军事目标。
-
-新闻链接：[英情报：俄军视乌人口密集区为目标](https://www.zaobao.com.sg/realtime/world/story20220306-1249505)
-
-审核校对：Barry Jack
-上传排版：V在途中
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
