--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,17 +1,25 @@
 ---
-title: 七哥赴英日需要美国同意并确信离开美国和在目的国安全
+title: 与战友神交的七哥绝不会向战友伸手要钱、解战友裤腰带
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114371/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114409/)
 
-Youtube视频链接：[https://youtu.be/GFa983YEEOY](https://youtu.be/GFa983YEEOY)
+Youtube视频链接：[https://youtu.be/x7CAIW5atrw](https://youtu.be/x7CAIW5atrw)
 
-**郭文贵先生：**首先一些战友关于去日本、去英国这个问题、话题刚才都谈到了，还有捐款的事情。大家一定要记住，我去日本、去英国有三个问题必须要解决才能去：第一个美国政府不同意，我去不了。就像美国的就是我们政治庇护的负责人跟我通电话跟我说，他说：“Miles，我今天必须告诉你个秘密，之所以不给你现在发这个政治庇护，甚至可能就不给你政府庇护了直接就给你发美国特殊贡献护照。”
+**郭文贵先生：**另外一个关于捐款的问题，我想给大家说。我从小到大，我决不伸手，这是我就像我说过，我从小看人家家吃饭的时候，我绝不会站着看人家吃饭，让人家给撵出去。人家一说吃饭，咱扭头就走。我从发小到今天，我从来没伸手给任何人要过东西，所以我从来不收人家礼物。更不要谈到今天，我看到的海外华人，灭共党、喊口号的、有病的、有癌症的、离婚的，不管啥事都要募捐。
 
-“之所以没给你，就不想让你离开美国。因为离开美国要确保你的安全。”他说“不是一个人认为，很多人都认为你是美国的、最佳的、最重要的、最值得保护的人。”——不叫资产。他说：“我们会用美国国旗把你保护好的。”所以说大家记住，就是我这个政治庇护，你要不是美国政府——美国政府说我随时可以给你护照的，我也可以给你政治庇护。但是没保证你安全情况下，是不可能让你离开美国的。
+就华人这个要饭的形象，在我心目中，对我造成的伤害已经不是一般的伤害了。这就是我从爆料革命到今天，如果七哥在战友当中要钱了、伸手了，或者是要生理上的快乐，把裤腰带解了，这个时候七哥就罪该万死了。玩笑可以开，我和你们之间嘴上活啥都可以有，精神上神交什么都可以想。
 
-他说：“另外一个，就是你离开美国去向任何地方，如果没有绝对的安全的保证，是不可能让你去的，而且这不是你一个人说了算。你去英国、你去日本，我们跟英国、日本政府联络好，他对你个人承诺都不能算数，必须在美国政府相关部门的可信下才能离开。”所以说这是肯定的，即使再快，也是六月份以后的事情。
+我现在想跟勺子干啥你管不着。我跟咱们的五月花怎么着你管不着、白素贞你管不着，你们管不着。我精神上想，你不能不让我想，是吧？我现在就想睡在你们的床上，咋滴？你能不让我睡吗？我就想了是吧？那疯太你不让我跟文疯想，我也想了。我想跟青藤“断背”，青藤媳妇管不着。我都是想，是吧？仅是意淫而止。
 
-所以战友们，安全的问题你们很担心，但是我特别感动，就是你们这种担心是发自内心的。这不是谷爱凌她娘操作她当冠军——什么我在美国时是美国人，在中国时是中国人，不是那么不自然，都是自然的。
+就像捐款，你们想给我捐，大家我都领了。永远七哥不可能让你们捐一分钱，捐一分钱，绝对不要再浪费时间。你们也不要给我发信息，也不要给安平，不要给任何人发信息，不要浪费你们的时间。等一会儿我再给你讲讲关于这个案子的，谈我的想法。还有一个七哥要记住，在这个事情之后，家人和旁边人对我的感动。你想想咱们国内的、香港的、台湾的。
+
+咱们一个台湾的一个老战友说：“欸！郭先生我知道你这个钱你不可能，哪有法院判你1.34亿，让你五天拿出来？不拿出来就把你扔监狱，怎么可能？”他说：“甭说你，我也拿不出来1.34亿美元，不可能。谁家钱搁那1.34亿美元？”他说：“你处置资产、卖股票，他说你从银行划钱，现在都不一定划得过去，怎么可能？”他说：“我现在就卖股票，我现在就捐，我有台机电的股票。”
+
+我说第一，不可能让你捐，我哪有一个让别人捐钱去还债的，怎么可能？这是一个；第二个，你们知道的今天这一单事情，和共产党对七哥——你去想一想香港，DBS银行、各个基金、海通股票、方正股票、盘古、裕达，你们不知道的七哥过去五年和七年的故事多了去了，你捐得完吗？共产党就是要耗掉你的精力、毁掉你的荣誉，让你穷困潦倒、无人问你。
+
+我说等到你们有一天看到七哥在某个地方，在垃圾楼里边儿找垃圾吃的时候，你就给我一个面包吃就可以了，你可千万别想捐钱。他笑得快不行了，他说：“永远不会。”我说：“你就做好准备，哪天七哥在垃圾篓里面发现一个人，步履蹒跚，正在捡垃圾。为什么不可以？当然可以，我为了活着，我一定会去捡的。到那时候我估计我唱歌卖唱，在东京的桥下、伦敦的桥下正在唱呢，是吧？（唱）我爱你，灭共的雪～七哥，来了，这个时候你给我钱，这就不叫捐款，咱这有偿服务，是吧？
+
+所以说大家捐钱的事情，别再提了，捐钱的事儿别再谈了。感谢了！
 
 编辑整理：Jacques；
 
