--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,25 +1,37 @@
 ---
-title: 再见了——俄罗斯游客
+title: 乌克兰无人机爱好者报名参加击退俄军的行动
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2114231/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114284/)
 
-#### 编译/简评                 意大利达芬奇农场                            小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Schermata-2022-03-06-alle-09.07.26-1.png)图片来源：ilgazzettino.it
-两年的新冠病毒疫情及乌克兰危机给意大利旅游业造成了致命性的打击。
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/03/1-60.jpg)
+图片来源：网络截图
 
-仅以复活节来看，没有来自莫斯科的游客会给意大利旅游部门造成两千万欧元的损失。
+据美联社3月5日报道，一些乌克兰无人机爱好者正冒着生命危险，正在组建一支志愿无人机部队，帮助他们的国家击退俄罗斯的入侵。
 
-俄罗斯游客与美国游客和中国游客一起被认为是最能花钱的。他们是五星级酒店和高级时装的消费者， 2019年有一百七十万俄罗斯人来意大利旅游。
+上周末，乌克兰军方在脸书上发文，呼吁市民捐赠业余无人机，并自愿成为有经验的飞行员来操作它们，“在这个愤怒的时刻，基辅需要你和你的无人机！”。
 
-据意大利旅游协会统计，2021年米兰是俄罗斯客人喜欢购物的城市，免税商品销售额的39%是卖给了俄罗斯客人。撒丁岛特别是翡翠海岸，是俄罗斯豪华游艇的最爱， 但现在他们却逃离了那儿。受重创的北方城市威尼斯、维罗纳2021年由于受疫情的影响， 俄罗斯游客减少了90%以上， 而仅在2019年仅威内托一个大区就接受了一百万的俄罗斯游客。由于乌克兰危机，美国游客纷纷取消预定的意大利假期，对于中国人目前还毫无限制，但受到了新冠疫情限制措施的影响。而恰恰是俄罗斯人、美国人和中国人是最大的旅游消费群体。
+一位在首都经营消费类无人机零售店的企业家说，其全部库存的约300架由中共国公司大疆生产的无人机已被分散用于这项事业。其他人正在努力从波兰和欧洲其他地方的朋友和同事那里获得更多的无人机，以跨越边境。
 
-欧盟对俄罗斯的制裁会给本来处于危机的旅游业更是雪上加霜。旅游业比起其他行业来说是首当其冲，深受其害。如果中共发动对台战争，今天的俄罗斯人在世界所处的状况就是明天中国人的写照。中共不灭，中国人和世界人民都要为此付出巨大的代价。
+“我们为什么要这样做？我们没有其他选择。这是我们的土地，我们的家园。”基辅工业无人机技术公司DroneUA的运营主管丹尼斯·苏什科（Denys Sushko）说，该公司在战前正帮助为农民和能源公司提供无人机服务。
+
+与乌克兰武库中的土耳其制造的大得多的战斗无人机不同，现成的消费者无人机作为武器没有什么用处，但它们可以成为强大的侦察工具。民众一直在使用空中摄像机追踪俄罗斯车队，然后将图像和GPS坐标转发给乌克兰军队。一些机器有夜视和热传感器。苏什科说，许多业内人士现在正试图让更多的小型无人机，包括大疆的替代品从邻近的欧洲国家运入乌克兰。它们也可用于协助搜救行动。
+
+但大疆公司提供的工具可以很容易地确定没有经验的无人机操作员的位置，而且没有人真正知道这家中共国公司或其客户会用这些数据做什么。这让一些志愿者感到不安。大疆公司拒绝讨论关于它如何应对这场战争的具体细节。
+
+乌克兰有一个蓬勃发展的无人机专家社区，其中一些人在国家航空大学或附近的基辅理工大学接受教育，并继续创建当地的无人机和机器人初创公司。大疆无人机经销商塔拉斯·特罗亚克（Taras Troiak）在基辅的大疆品牌店是这个社区的一个中心，因为它经营着一个维修中心，并举办培训课程和一个爱好俱乐部。由特罗亚克管理的一个专注于无人机的公共脸书小组有超过15000名成员，他们一直在交换关于如何协助乌克兰部队的提示。
+
+澳大利亚无人机安全专家迈克·蒙尼克说：“乌克兰境内的民用无人机操作员面临的风险仍然很大。鉴于我们在迄今为止的战斗中所看到的情况，找到操作员的位置可能会导致定向导弹射击。这不再是我们以前冲突中的交战规则了”。蒙尼克说，最近几天，信息应用Telegram上的俄语频道主要讨论如何找到乌克兰的无人机。
+
+由于乌克兰与俄罗斯支持的分离主义分子在乌克兰东部的长期冲突，乌克兰的一些无人机社区已经有在冲突地区部署其专业知识的经验。蒙尼克的公司，DroneSec，在过去的一年里追踪到了冲突双方用炸药武装小型无人机的多起事件。
+
+大疆也有应对作战人员试图将其无人机武器化的经验，并在叙利亚和伊拉克的冲突中使用所谓的“地理围栏 ”技术来阻止无人机的移动。目前还不清楚它是否会在乌克兰做同样的事情，即使它这样做，也有办法绕过它。
+
+小型民用无人机无法与俄罗斯的战斗力相比，但在一场旷日持久的战争中可能会变得越来越重要。“我们将看到这些小型民用无人机的临时武装，就像我们在世界各地的冲突中看到的那样，从叙利亚到伊拉克、也门和阿富汗，” 写过一本关于战争机器人的书的美国研究员辛格说，“就像简易爆炸装置或燃烧弹一样，它们不会改变战局，但它们肯定会让俄罗斯士兵感到困难。”
+
+新闻来源：[Ukrainian drone enthusiasts sign up to repel Russian forces](https://apnews.com/article/russia-ukraine-kyiv-technology-business-europe-47dfea7579cedfe65a70296eb0188212)
 
 
-
-原文链接：[https://www.ilgazzettino.it/nordest/venezia/turisti\_russi\_veneto\_venezia\_verona\_cosa\_succede\_ora\_disdette\_seconde\_case\_hotel\_yacht-6544072.html](https://www.ilgazzettino.it/nordest/venezia/turisti_russi_veneto_venezia_verona_cosa_succede_ora_disdette_seconde_case_hotel_yacht-6544072.html)
-
-编辑、上传： Xiao  baige
 
  
 
