--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,24 +1,34 @@
 ---
-title: 视频&#124;俄罗斯战俘呼吁俄军士兵不要做炮灰
+title: 新中国联邦人乌克兰战区人道救援首战告捷
 ---
-`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2114171/)
+`cindy` [轉載自GNews](https://gnews.org/zh-hans/2114201/)
 
-制作：香草山视频部
+撰稿：澳喜cindy
 
-3月4日，据盖特消息显示，被乌克兰俘获的俄罗斯士兵近日陆续通过视频向外界传递出他们被蒙骗出战以及其自身对战争的拒绝。
+俄乌战争已经第十天了，双方两次谈判均无果。俄军人数比乌军多5-10倍，并用导弹狂轰滥炸，快速向各大城市进军，核发电厂被炮弹击中起火。形势相当严峻。
 
-这些俄罗斯士兵表示，他们在出战前根本不清楚这次战争的对象和性质，而他们对此的任何疑问则全部遭到上级长官粗暴的拒绝与封口。更有士兵提到，直至进入乌克兰后他们才清楚，这次战争的目的是为了侵略乌克兰，而不是“解救”乌克兰民众。
+乌克兰总统再三喊话普京：“坐下来面谈，我不咬人，你怕什么？”“普京到底要什么”？
 
-至于俄罗斯当局在交战中采取的手段，这些士兵证实，俄军不仅不会帮阵亡的将士收尸，甚至还会将伤残的俄军士兵就地处死并焚毁。
+乌克兰总统在新闻发布会上说：“俄军随身带来了焚尸炉 ，世界末日已经到来”。
 
-为此，这些俄罗斯士兵在视频中声明，他们实际上是受到了政府的欺骗，他们既不愿意侵略乌克兰，也不愿意成为这场独裁者战争的炮灰。这些士兵也向所有的俄军将士呼吁， 请大家不要再受政府的蒙骗，成为独裁者的牺牲品。同时，他们也号召俄罗斯人民站起来反对普京，停止这场毫无意义的战争，停止这场人类的灾难。
+这确实是够惊悚的。猜测：这可能是普京已经预估到将有大批士兵死亡，将来怎么向国内的百姓交代呢？这种消尸灭迹，数据可以篡改，死无对证。
 
-发稿：林礼
+我们看到很多自媒体的视频，采访被俘的俄国士兵：你们知道为什么要打乌克兰吗？他们都说根本不知道，上级告诉他们只是军演。看来这场战争真的只是普京自己需要的战争。
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+乌克兰总统惊呼：现在已经是世界末日了！
+
+鉴于乌克兰局势日益恶化，新中国联邦来自英国、美国、瑞士、加拿大等国家的战友们，几天来不顾自己安危，不辞劳苦，忘我的奔赴战区，准备救人所需的繁杂的事务。昨天成功地从乌克兰轰鸣的炮火中救出了70个乌克兰战区的孩子、母亲和一些中国同胞。乘坐的大巴历经15个小时到达了乌克兰的邻国波兰避难场所。在那里为被救人员筹备物资和生活用品的战友们，连续多日没有休息好，大巴车抵达时，第一时间送上了各种食物和水。并且还安排好了安全的住宿等待飞往各个国家，期间将提供30天以内的免费食宿。
+
+波兰这位热舒夫市长的善良的忠告：“希望中共国站出来反对这场战争”。“不要站在边上看着”。
+
+中共何止是不反对普京发动的这场战争，习近平就是普京的坚强后盾。
+
+接下来，新中国联邦将已安排好的营救专机747、757、大力神运输机，协助华人同胞、美国及其他各国友人免费撤离，目的地为美国和其他安全中转国。作为新中国联邦的一员我们深为有这样的无私无畏的战友们而自豪，没有文贵先生的智慧和决策和非常好的信誉，各个复杂的环节可能很难在如此短的时间里做到这么完美。看了整个过程， 真的让人感动。被救的人素不相识，甚至连彼此的姓名都不知道，只是为了救人一命。这是新中国人的伟大壮举！可赞可颂！
+
+*编辑：cindy*
+
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
 
  
 
