--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,47 +1,41 @@
 ---
-title: 被谷爱凌激怒的美国斯坦福面包店老板怒吼华人滚回中国
+title: 北约秘书长:乌克兰未来几天将会有更多的死亡、苦难和破坏
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114354/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2114394/)
 
-Youtube视频链接：[https://youtu.be/GJ8H7NogQTM](https://youtu.be/GJ8H7NogQTM)
+撰稿：Streamline
+校对：跟着曙光跑
+上传：Qcfm
 
-**郭文贵先生：**我们今天坐这直播的时候，兄弟姐妹们，你们有想过吗？你们有孩子以后到了美国、西方，这些美国人怎么看我们？头两天在斯坦福我们一个华人战友他说：“坏了，郭先生，我现在在斯坦福就突然发现谷爱凌的事件让我在斯坦福让我感觉倍加孤独。
+据新闻极限网（Newsmax）3月4日报道，北约（NATO Secretary General）秘书长斯托尔滕贝格（Jens Stoltenberg）星期五说，在俄罗斯对乌克兰发动无端攻击之后，乌克兰未来几天的局势“可能比之前更糟”。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/20220306_1.png)图片来源：NewsMax
+据哥伦比亚广播公司（CBS）报道，斯托尔滕贝格在布鲁塞尔举行的北约外长紧急会议上说，“未来的日子可能会更糟，会有更多的死亡、更多的苦难和更多的破坏。”
 
-我最爱吃的面包店也是他最爱吃的面包店，他说：“七哥，你知道咱俩最爱吃的面包店我去了，人家面包店的老板说什么吗？‘你们中国人就不应该待在美国，就应该滚回你们的国家去！’（过去）这个人对我多有好，（现在）愤怒的眼光大早晨对着我。”
+这位北约负责人还拒绝了在乌克兰设立“禁飞区”的呼吁，理由是可能导致与俄罗斯的这场冲突升级。
 
-你知道这个战友跟我说完以后，我当时我就在这外边，我在这康州我就住在这个外边，我站在那，你知道我真的是浑身发抖。我能感觉到大地在颤抖，美国人在愤怒！
+自莫斯科开始入侵的九天以来，乌克兰总统弗拉基米尔·泽伦斯基(Volodymyr zelensky)一直敦促西方伙伴实施禁飞区。
 
-想什么呢战友们？你以为这直播在跟你聊天呢？战友们，你们直播你们花时间你们花精力，过去五年七哥的直播，共产党罚走了130亿美元，这美国又罚我2.6亿美元，倾家荡产、老娘没命、全家被抓，所有的钱都弄完，连老爹都是被扔在街头，同事无工作可做。
+“我们理解这种绝望，”斯托尔滕贝格说，“但我们也相信，如果我们这么做，最终会导致欧洲爆发一场全面战争，涉及更多的国家和更多的苦难。”
 
-你们直播是花时间，我直播是花命、流血，不仅流汗还流血。七哥看着嘻嘻哈哈的，过去的直播每一秒钟都在与邪恶斗争。咱们“流水”，叫这边流着水，七哥那边就流着血，你们“流水”了，七哥就流血了，一定的，是吧？
+斯托尔滕贝格补充说，北约已经加强了其东侧的兵力，并将与芬兰和瑞典这两个北约伙伴但不是正式盟友进行更密切的合作。据《华盛顿邮报》(The Washington Post) 报道。
 
-我们就今天这问题咱好好谈谈，是吧？咱别整大家这脸一脸严肃，是不是？共产党还没死呢，你们别这样，共产党死了你们再这样。谢谢，我先说到这儿，谢谢谢谢！开始主持人。
+北约秘书长还表示，北约成员国将向格鲁吉亚、摩尔多瓦和波黑等可能受到俄罗斯侵略的非成员国提供更多的支持。
 
-编辑整理：Jacques；
+周五早些时候，控制了欧洲最大的核电站的俄罗斯军队正在埋设炸药，以 “威胁 “整个欧洲大陆，核电站工作人员警告说。
 
-字幕文件制作：小满；
+位于乌克兰东南部的扎波里日亚核电站星期五早晨遭到俄罗斯军队的炮击，并在他们发动攻击时起火。大火最终被扑灭了。
 
-视频制作及上传：Cindy；
+“他们将试图炸毁核电站并威胁整个欧洲，”扎波罗热的员工在给乌克兰媒体和政府当局的信中写道。
 
-G-News发布：小满；
+工作人员警告说，俄罗斯总统弗拉基米尔·普京的部队“在核电站附近放置炸药，以向乌克兰军队和人民施加压力。”
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+据周四报道，一名欧洲情报官员说，俄罗斯已经制定了包括公开处决在内的计划，以阻止乌克兰人反击普京的军队。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+彭博社(Bloomberg)报道，在俄罗斯无端发动袭击后，克里姆林宫已经想出了一些办法，来打击为自由而战的乌克兰人的士气。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+莫斯科的策略将在俄罗斯军队控制一个城市后使用，包括镇压抗议活动，拘留反对者，并可能进行公开处决，一位官员告诉彭博社。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+源新闻链接：[https://www.newsmax.com/newsfront/nato-stoltenberg-russia-ukraine/2022/03/04/id/1059713/](https://www.newsmax.com/newsfront/nato-stoltenberg-russia-ukraine/2022/03/04/id/1059713/)
 
  
 
