--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,39 +1,43 @@
 ---
-title: 意当局扣押俄罗斯亿万富翁7000万美元的游艇
+title: 七哥赴英日需要美国同意并确信离开美国和在目的国安全
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114337/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114371/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2022/03/2-35.jpg)
-图片来源：《零对冲》
+Youtube视频链接：[https://youtu.be/GFa983YEEOY](https://youtu.be/GFa983YEEOY)
 
-《零对冲》报道，又一艘属于俄罗斯商人的游艇被扣押，这次是在意大利。 据报道，意大利警方查获了位于意大利利古里亚省因佩里亚​​的 俄罗斯斯商人亚历克西.阿里克山德罗维茨.莫德肖夫（Alexey Alexandrovits Mordaschov ）的一艘价值 6500 万欧元（7100 万美元）的游艇“Lady M Yacht”。 并说这次扣押符合最近的欧盟制裁。
+**郭文贵先生：**首先一些战友关于去日本、去英国这个问题、话题刚才都谈到了，还有捐款的事情。大家一定要记住，我去日本、去英国有三个问题必须要解决才能去：第一个美国政府不同意，我去不了。就像美国的就是我们政治庇护的负责人跟我通电话跟我说，他说：“Miles，我今天必须告诉你个秘密，之所以不给你现在发这个政治庇护，甚至可能就不给你政府庇护了直接就给你发美国特殊贡献护照。”
 
-莫德肖夫是俄罗斯亿万富翁商人，也是俄罗斯企业集团 Severstal 的主要股东和董事长，该集团在金属、能源和矿业公司中拥有权益。
+“之所以没给你，就不想让你离开美国。因为离开美国要确保你的安全。”他说“不是一个人认为，很多人都认为你是美国的、最佳的、最重要的、最值得保护的人。”——不叫资产。他说：“我们会用美国国旗把你保护好的。”所以说大家记住，就是我这个政治庇护，你要不是美国政府——美国政府说我随时可以给你护照的，我也可以给你政治庇护。但是没保证你安全情况下，是不可能让你离开美国的。
 
-在有关报道俄罗斯入侵乌克兰的新闻浪潮中，扣押属于受制裁的俄罗斯寡头的游艇已成为西方国家的一种娱乐。前中央情报局雇员发起了一场“夺取舰队”的运动，而另一位美国国会议员则试图让普通美国人参与其中。
+他说：“另外一个，就是你离开美国去向任何地方，如果没有绝对的安全的保证，是不可能让你去的，而且这不是你一个人说了算。你去英国、你去日本，我们跟英国、日本政府联络好，他对你个人承诺都不能算数，必须在美国政府相关部门的可信下才能离开。”所以说这是肯定的，即使再快，也是六月份以后的事情。
 
-更重要的是，拜登总统本周宣布了一个更积极的、针对俄罗斯寡头的“捕获盗国贼（KleptoCapture） 的特别工作组，主要是没他们的房地产和其他珍贵资产。
+所以战友们，安全的问题你们很担心，但是我特别感动，就是你们这种担心是发自内心的。这不是谷爱凌她娘操作她当冠军——什么我在美国时是美国人，在中国时是中国人，不是那么不自然，都是自然的。
 
-许多富有的俄罗斯人的游艇已经离开西方前往莫斯科，其中包括一艘通常被认为与普京有关的游艇。 但正如我们上周解释的那样，据称属于普京的大部分财富，包括游艇和几​​处豪宅（包括据报道耗资 10 亿美元的黑海度假村），已无可能同普京扯上任何关系，因为根据主要离岸律师事务所和银行泄露的财务记录，它们的所有权是通过中介机构来操纵的。
+编辑整理：Jacques；
 
-当然，并非所有俄罗斯寡头都带着资产逃离欧洲，拜登政府本周早些时候明确表示，他们将“没收俄罗斯亿万富翁的游艇、豪华公寓和私人飞机”。
+字幕文件制作：小满；
 
-我们的问题是：“拜登的目标是没收数十亿美元，俄罗斯寡头难道不会从海上逃到印度洋？”
+视频制作及上传：Cindy；
 
-答案似乎是“是”。 但并不是所有的俄罗斯寡头都成功了。 法国宣布扣押属于俄罗斯石油公司首席执行官伊戈尔谢钦（Igor Sechin)的超级游艇。 法国财政部长布鲁诺·勒梅尔（Bruno Le Maire）本周透露，此举是欧盟对俄罗斯持续制裁的一部分。
+G-News发布：小满；
 
-这艘游艇被称为 Amore Vero（真爱），它“在一夜之间”在地中海港口 La Ciotat 被没收”，彭博社周四上午报道。而布隆伯格写道，当这艘游艇被没收时，它正在“准备紧急出发”。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-勒梅尔本周在推特上表示：“感谢法国海关对与俄罗斯领导人关系密切的人实施欧盟制裁。”
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-而另据报告，法国预算部长奥利弗·杜索普特澄清这艘游艇“被阻止离开”，但资产仍未被冻结。 最初打算在港口停留至四月。
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-另外，一些最大的俄罗斯拥有的豪华游艇正在印度洋周围航行。
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-拜登总统周二晚在国情咨文中警告称，美国和欧洲将“没收”俄罗斯亿万富翁的资产。他说：“今晚，我要对从这个暴力政权中建立数万亿美元的俄罗斯寡头和腐败政权说：‘够了！‘我们为了你的不义之财而来！”
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-原文链接：[https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure](https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure)
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
