--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,42 +1,48 @@
 ---
-title: 新闻述评：乌克兰公开优待战俘令普京愤怒
+title: 被谷爱凌激怒的美国斯坦福面包店老板怒吼华人滚回中国
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2114333/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114354/)
 
-作者：东京樱花团｜捆绑CCP一千年
+Youtube视频链接：[https://youtu.be/GJ8H7NogQTM](https://youtu.be/GJ8H7NogQTM)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/新闻述评：乌克兰公开优待战俘令普京愤怒.png)
+**郭文贵先生：**我们今天坐这直播的时候，兄弟姐妹们，你们有想过吗？你们有孩子以后到了美国、西方，这些美国人怎么看我们？头两天在斯坦福我们一个华人战友他说：“坏了，郭先生，我现在在斯坦福就突然发现谷爱凌的事件让我在斯坦福让我感觉倍加孤独。
 
-**乌克兰国防部表示允许被俘的俄罗斯人联系亲人，遵循日内瓦公约优待战俘，在网站公开战俘联系方式。这一举措激怒了克里姆林宫，并阻止俄罗斯人联系自己的亲人，怒斥乌克兰总统是新纳粹分子。**
+我最爱吃的面包店也是他最爱吃的面包店，他说：“七哥，你知道咱俩最爱吃的面包店我去了，人家面包店的老板说什么吗？‘你们中国人就不应该待在美国，就应该滚回你们的国家去！’（过去）这个人对我多有好，（现在）愤怒的眼光大早晨对着我。”
 
-据[乌克兰自由电台](https://www.radiosvoboda.org/a/news-poshuk-poloneni-rf/31737995.html)5日消息，“乌克兰国家安全和国防委员会的工作人员透露，他们正在创建一个“战俘营”网站，公布有关从 2022 年 2 月 24 日开始入侵乌克兰领土被俘的俄罗斯战俘的信息。”乌克兰国防委员会声明，将遵照“日内瓦公约”中《[战俘待遇公约](https://www.ohchr.org/EN/ProfessionalInterest/Pages/TreatmentOfPrisonersOfWar.aspx)》的规定，给他们食物、衣服和治疗，并保持正常状态。
+你知道这个战友跟我说完以后，我当时我就在这外边，我在这康州我就住在这个外边，我站在那，你知道我真的是浑身发抖。我能感觉到大地在颤抖，美国人在愤怒！
 
-消息称，国家安全和国防委员会打击虚假信息中心表示，俄罗斯战俘的亲属可以联系乌克兰国防部的代表，与自己被俘的亲人取得联系，并且俄罗斯公民，包括士兵家属或其熟人，可以在官网获取有关囚犯状况和下落的信息。
+想什么呢战友们？你以为这直播在跟你聊天呢？战友们，你们直播你们花时间你们花精力，过去五年七哥的直播，共产党罚走了130亿美元，这美国又罚我2.6亿美元，倾家荡产、老娘没命、全家被抓，所有的钱都弄完，连老爹都是被扔在街头，同事无工作可做。
 
-- ***延展阅读：***[***乌克兰马里乌波尔市沦陷，俄军挟持了该市的40万平民***](https://www.pravda.com.ua/news/2022/03/6/7328636/)
+你们直播是花时间，我直播是花命、流血，不仅流汗还流血。七哥看着嘻嘻哈哈的，过去的直播每一秒钟都在与邪恶斗争。咱们“流水”，叫这边流着水，七哥那边就流着血，你们“流水”了，七哥就流血了，一定的，是吧？
 
+我们就今天这问题咱好好谈谈，是吧？咱别整大家这脸一脸严肃，是不是？共产党还没死呢，你们别这样，共产党死了你们再这样。谢谢，我先说到这儿，谢谢谢谢！开始主持人。
 
-乌克兰国防部这一举措对俄罗斯普京政府颇具杀伤力，原因是这会瓦解俄军内部士气。根据[乌克兰在线新闻](https://www.pravda.com.ua/news/2022/03/4/7328078/)透露，“俄罗斯人权监察员塔蒂亚娜·莫斯卡尔科娃（Tatiana Moskalkova）呼吁红十字国际委员会帮助寻找和协助在乌克兰的俄罗斯战俘，希望确定被捕的俄罗斯军人的下落，并确保他们在国际法下得到乌克兰政府的保护和帮助，包括医疗权。”
+编辑整理：Jacques；
 
-据称，这些被派往乌克兰作战的俄罗斯士兵自首后，乌克兰为他们提供医疗服务，并让他们有机会打电话给亲人。乌克兰还收集囚犯数据并将其发布在一个特殊的网上“[战俘营](https://invaders-rf.com/?fbclid=IwAR21EvNHKV7_F1JDokbFVL1PbqTXsjrJY81nj3O5mWiKWu8TQLUZ1cbPQuU)”上，以便他们的亲属找到他们的孩子、父母和孙子孙女。在通话过程中，战俘们对他们的亲属说，他们得到了很好的待遇，得到了医疗服务、食物和温暖，这一切都记录在照片和视频中。”
+字幕文件制作：小满；
 
-当确定乌克兰优待战俘消息后，俄罗斯普京政府崩溃了，他们采取了共产党一样的愚蠢做法，即阻止其公民获取真实信息，邪恶的普大帝试图阻止乌克兰网站发布俄罗斯士兵在乌克兰土地上被杀和俘虏的照片和视频，同时不让俄罗斯母亲将死去的儿子带回家。这一人道主义关怀彻底激怒了普京，[普京对着摄像头说，“乌克兰领导人为是‘一群吸毒者和新纳粹分子](https://www.pravda.com.ua/news/2022/02/25/7325841/)’。”这恐怕是普京向习近平学习到最好的谎言技巧之一——纳粹称反纳粹军为纳粹，并谎称“乌克兰大规模拘留抗议战争的人 ”。
+视频制作及上传：Cindy；
 
-- ***延展阅读：***[***乌克兰真理报 – 三千名美国退伍军人将为乌克兰而战***](https://www.pravda.com.ua/news/2022/03/6/7328675/)
-- ***延展阅读：***[***普京吁占领军推翻泽连斯基政府，建立军政权***](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20220225-%E6%99%AE%E4%BA%AC%E8%A6%81%E6%9B%B4%E6%8D%A2%E4%B9%8C%E5%85%8B%E5%85%B0%E6%94%BF%E5%BA%9C-%E6%89%B6%E6%8C%81%E5%86%9B%E6%94%BF%E6%9D%83)
+G-News发布：小满；
 
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-这是乌克兰军方在战时对待战俘问题上采取的最为积极透明的人道主义关怀政策，这也正是乌克兰采取与众不同的做法，开启了一场“直播战争”的手法，将侵略者的行为公布到互联网上，使正义不被谎言所掩盖，诸如普京向乌克兰军喊话这类谎言：
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-*普京说：“我再次呼吁乌克兰武装部队的军人：不要让新纳粹分子和卢德主义者利用你的孩子、妻子和老人作为人盾。把权力掌握在自己手中。看来，我们与你们谈判比与这伙在基辅定居并劫持整个乌克兰人民的吸毒者和新纳粹分子谈判更容易。”*
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-顺便提醒普京，习近平类谎言的本质是，[把本国发展进步的前途命运牢牢掌握在自己手中](https://news.bjd.com.cn/2021/11/27/10009927.shtml)，这类谎言的本质是共产主义 。共产党把权利看做生命，当它在向弱者喊话时，总是许诺权利，最后人们发现，把权力掌握在自己手中的不是人民，而是纳粹统治阶级——共产党。这就是中国共产党的本质，它继承了前苏联的谎言和纳粹主义思想，造成了今天全球性的人道灾难。如今，普京强人形象轰然倒塌，取而代之的是习近平式的谎言，在这场出师不利的战况下，普京对于乌克兰“优待战俘”做法感到恐惧。事实证明，天下独裁者都有一个共同点——害怕真相。
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-2022年3月6日
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-*校对：东京樱花团 / 東洋武士*
-*发布：东京樱花团 / 老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
